--- a/data/cards/01688285.yaml
+++ b/data/cards/01688285.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 4 monsters
-    While this card has material, it is unaffected by Trap effects and by activated effects from any other monster with the same Type as any of those materials. You can only use each of the following effects of "Traptrix Pinguicula" once per turn. You can detach 1 material from this card; add 1 "Traptrix" monster from your Deck to your hand. If a monster(s) that is owned by your opponent is sent to the GY, or banished, by card effect: You can attach 1 of them to this card as material.
+    While this card has material, it is unaffected by Trap effects and by activated effects from any other monster with the same Type as any of those materials. You can only use each of the following effects of "Traptrix Pinguicula" once per turn. You can detach 1 material from this card; add 1 "Traptrix" monster from your Deck to your hand. If a monster(s) that is owned by your opponent is sent to the GY, or banished, by card effect (except during the Damage Step): You can attach 1 of them to this card as material.
   de:
   es:
   fr:
