--- a/data/cards/49027020.yaml
+++ b/data/cards/49027020.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Unaffected by the effects of "Hole" Normal Traps. You can only use each of the following effects of "Traptrix Pudica" once per turn. When this card is Normal Summoned: You can add 1 "Traptrix Orchard" from your Deck to your hand. If this card is Special Summoned: You can target 1 opponent's Special Summoned monster; banish it, and if you do, during the next Standby Phase, your opponent can Special Summon 1 of their banished monsters.
+    Unaffected by the effects of "Hole" Normal Traps. You can only use each of the following effects of "Traptrix Pudica" once per turn. When this card is Normal Summoned: You can add 1 "Traptrix Orchard" from your Deck to your hand. If this card is Special Summoned: You can target 1 opponent's Special Summoned monster; banish it, also, during the next Standby Phase, your opponent can Special Summon 1 of their banished monsters.
   de:
   es:
   fr:
