--- a/data/cards/53334471.yaml
+++ b/data/cards/53334471.yaml
@@ -8,7 +8,7 @@ name:
   it: Scontro Gozen
   pt: Duelo Gozen
   ja: <ruby>御<rt>ご</rt></ruby><ruby>前<rt>ぜん</rt></ruby><ruby>試<rt>じ</rt></ruby><ruby>合<rt>あい</rt></ruby>
-  ja_romaji: Gozen Jiai
+  ja_romaji: Gozenjiai
   ko: 어전시합
   ko_rr: Eojeonsihap
   zh-TW:
