--- a/data/cards/37706769.yaml
+++ b/data/cards/37706769.yaml
@@ -57,6 +57,7 @@ def: 0
 materials: 1 Tuner + 1 or more non-Tuner monsters
 series:
 - The Agent
+- Field Searcher
 images:
 - index: 1
   image: TheExecutoroftheUnderworldPluto-GFP2-EN-UR-1E.png
