--- a/data/cards/48589580.yaml
+++ b/data/cards/48589580.yaml
@@ -55,6 +55,7 @@ atk: 2400
 materials: 2+ Fairy monsters
 series:
 - Parshath
+- Field Searcher
 images:
 - index: 1
   image: CelestialKnightlordParshath-DUOV-EN-UR-1E.png
