--- a/data/cards/96182448.yaml
+++ b/data/cards/96182448.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードが「ニトロ」と名のついたシンクロモンスターのシンクロ召喚に使用され墓地へ送られた場合、自分のデッキからカードを１枚ドローする。
   ko: |-
-    이 카드가 "니트로" 라고 이름이 붙은 싱크로 몬스터의 싱크로 소환에 사용되어 묘지에 보내졌을 경우, 자신의 덱으로부터 카드를 １매 드로우 한다.
+    이 카드가 "니트로"라는 이름이 붙은 싱크로 몬스터의 싱크로 소환에 사용되어 묘지로 보내졌을 경우, 자신의 덱에서 카드를 1장 드로우한다.
   zh-TW:
   zh-CN: |-
     ①：此卡被使用于"氮素"怪兽的同步召唤，并被送至墓地的情况下发动。自己从牌组抽1张。
