--- a/data/rush/yugipedia913611.yaml
+++ b/data/rush/yugipedia913611.yaml
@@ -12,8 +12,21 @@ name:
   ko_rr:
   zh-TW:
   zh-CN:
-text:
-  en:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Dragon Type monster from your hand to your opponent's field in face-up Defense Position. Then, you can return 1 Level 8 or lower Attack Position monster from your opponent's field to the owner's hand.
   de:
   es:
   fr:
