--- a/data/cards/92107604.yaml
+++ b/data/cards/92107604.yaml
@@ -12,7 +12,7 @@ name:
   ko: 루닉의 샘
   ko_rr: Runik-ui Saem
   zh-TW:
-  zh-CN: 神碑之泉
+  zh-CN: 卢恩神碑之泉
 text:
   en: |-
     You can activate "Runick" Quick-Play Spell Cards from your hand during your opponent's turn. Once per turn, if you activate a "Runick" Quick-Play Spell Card: You can target up to 3 "Runick" Quick-Play Spells in your GY; place them on the bottom of your Deck in any order, then draw the same number of cards.
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 필드 존에 존재하는 한, 자신은 상대 턴에 "루닉" 속공 마법 카드를 패에서 발동할 수 있다. ②: 1턴에 1번, 자신이 "루닉" 속공 마법 카드를 발동했을 경우, 자신 묘지의 "루닉" 속공 마법 카드를 3장까지 대상으로 하고 발동할 수 있다. 그 카드를 좋아하는 순서대로 덱 아래로 되돌린다. 그 후, 되돌린 수만큼 자신은 덱에서 드로우한다.
   zh-TW:
   zh-CN: |-
-    ①：只要这张卡在场地区存在，自己就能在对手的回合从手牌发动「神碑」速攻魔法卡。②：1回合1次，自己发动「神碑」速攻魔法卡的场合，可以以自己墓地的最多3张「神碑」速攻魔法卡为对象发动。使那些卡按照喜欢的顺序返回卡组下面。那之后，按照返回的数量自己从卡组抽卡。
+    ①：只要此卡存在于场地区域，自己可以在对手回合将"神碑"速攻魔法卡从手牌发动。②：1回合1次，自己发动"神碑"速攻魔法卡的情况下，以自己墓地的最多3张"神碑"速攻魔法卡为对象可以发动。将该卡以喜欢的顺序放回牌组下面。然后，自己依放回的数量从牌组抽牌。
 card_type: Spell
 property: Field
 series:
@@ -82,6 +82,11 @@ sets:
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Ultra Rare
+    - Secret Rare
+  zh-CN:
+  - set_number: DBTM-SC027
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
