--- a/data/cards/44822037.yaml
+++ b/data/cards/44822037.yaml
@@ -12,7 +12,7 @@ name:
   ko: 엔젤 스태추－아즈룬
   ko_rr: Enjel Seutaechu - Ajeurun
   zh-TW:
-  zh-CN: 碑像天使-亚兹卢恩死月弓碑
+  zh-CN: 碑像天使－亚兹卢恩
 text:
   en: |-
     Special Summon this card as an Effect Monster (Fairy/LIGHT/Level 4/ATK 1800/DEF 1800). (This card is also still a Trap.) Once per turn, when your opponent would Special Summon a monster(s) while this card is in your Monster Zone: You can send to the GY, 1 Continuous Trap in your Monster Zone that was Special Summoned from the Spell & Trap Zone; negate the Summon, and if you do, destroy that monster(s). When this card in the Monster Zone is destroyed by battle: You can destroy the monster that destroyed this card.
@@ -32,9 +32,7 @@ text:
     ①: 이 카드는 발동 후, 효과 몬스터(천사족 / 빛 / 레벨 4 / 공 1800 / 수 1800)가 되어, 몬스터 존에 특수 소환한다. 이 카드는 함정 카드로도 취급한다. ②: 1턴에 1번, 이 카드가 몬스터 존에 존재하고, 상대가 몬스터를 특수 소환할 시기에, 마법 & 함정 존에서 특수 소환된 자신 몬스터 존의 지속 함정 카드 1장을 묘지로 보내고 발동할 수 있다. 그 특수 소환을 무효로 하고, 그 몬스터를 파괴한다. ③: 몬스터 존의 이 카드가 전투로 파괴되었을 때에 발동할 수 있다. 이 카드를 파괴한 몬스터를 파괴한다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡发动后变成效果怪兽（天使族·光·4星·攻/守1800）在怪兽区域特殊召唤。这张卡也当作陷阱卡使用。
-    ②：1回合1次，这张卡在怪兽区域存在，对方把怪兽特殊召唤之际，把从魔法与陷阱区域特殊召唤的自己的怪兽区域1张永续陷阱卡送去墓地才能发动。那次特殊召唤无效，那些怪兽破坏。
-    ③：怪兽区域的这张卡被战斗破坏时才能发动。把让这张卡破坏的怪兽破坏。
+    ①：此卡发动后变为效果怪兽（天使族・光・星４・攻／守１８００），特殊召唤至怪兽区域。此卡也视为陷阱卡。②：１回合１次，此卡存在于怪兽区域，对手特殊召唤怪兽之际，将自己怪兽区域１张被从魔法与陷阱区域特殊召唤的永续陷阱卡送至墓地可以发动。将该特殊召唤无效，将该怪兽破坏。③：怪兽区域的此卡因战斗被破坏时可以发动。将破坏此卡的怪兽破坏。
 card_type: Trap
 property: Continuous
 series:
@@ -96,6 +94,11 @@ sets:
   ko:
   - set_number: BLVO-KR079
     set_name: Blazing Vortex
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: MGP5-SC167
+    set_name: Mega Pack 05
     rarities:
     - Rare
 limit_regulation:
