--- a/data/cards/88305705.yaml
+++ b/data/cards/88305705.yaml
@@ -12,7 +12,7 @@ name:
   ko: 브레이브아이즈 펜듈럼 드래곤
   ko_rr: Beureibeu-aijeu Pendyulleom Deuraegon
   zh-TW:
-  zh-CN: 勇猛眼灵摆龙
+  zh-CN: 勇气眼灵摆龙
 text:
   en: |-
     1 "Pendulum Dragon" monster + 1 Warrior-Type monster
@@ -40,8 +40,8 @@ text:
     ①: 이 카드가 융합 소환에 성공했올 때에 발동할 수 있다. 사대 필드의 모든 몬스터의 공격력은 0 이 된다. 이 턴에, 이 카드 이외의 몬스터는 공격할 수 없다. ②: 이 카드가 몬스터 존에 존재하는 한, 공격력 0 의 몬스터가 발동한 효과는 무효화된다. ③: 이 카드의 공격에 의해 사대 몬스터가 파괴되지 않은 데미지 스텝 종료 시에 발동할 수 있다. 그 상대 몬스터를 제외한다.
   zh-TW:
   zh-CN: |-
-    「灵摆龙」怪兽＋战士族怪兽
-    ①：这张卡融合召唤成功时才能发动。对方场上的全部怪兽的攻击力变成0。这个回合，这张卡以外的自己怪兽不能攻击。②：只要这张卡在怪兽区域存在，攻击力0的怪兽发动的效果无效化。③：这张卡的攻击没让对方怪兽被破坏的伤害步骤结束时才能发动。那只对方怪兽除外。
+    "灵摆龙"怪兽＋战士族怪兽
+    ①：此卡融合召唤成功时可以发动。对手场上所有怪兽的攻击力变为0。此回合，此卡以外的自己的怪兽不可攻击。②：只要此卡存在于怪兽区域，攻击力0的怪兽发动的效果无效化。③：此卡攻击对手怪兽但未将其破坏的伤害步骤结束时可以发动。将该对手怪兽除外。
 card_type: Monster
 monster_type_line: Dragon / Fusion / Effect
 attribute: DARK
@@ -95,6 +95,11 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: SD29-SCP02
+    set_name: 'Structure Deck: Master of Pendulum Deck Enhancement Pack'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
