--- a/data/cards/yugipedia914727.yaml
+++ b/data/cards/yugipedia914727.yaml
@@ -31,6 +31,8 @@ attribute: DARK
 level: 5
 atk: 0
 def: 2300
+series:
+- Spider
 images:
 - index: 1
   image: FissioningMotherSpider-23PP-JP-OP.png
