--- a/data/cards/yugipedia914725.yaml
+++ b/data/cards/yugipedia914725.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Effects unknown.
+    Once per turn, when an opponent's monster declares an attack: You can send 1 card from your Spell & Trap Zone to the GY; return that opponent's monster to the hand. You can only use each of the following effects of "Praying Mantis" once per turn. During your Standby Phase: You can Special Summon 1 "Baby Mantis Token" (Insect/WIND/Level 1/ATK 500/DEF 500). You can banish this card from your GY; Special Summon 1 "Baby Mantis Token".
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ text:
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: ??? / Effect
+monster_type_line: Insect / Effect
 attribute: WIND
 level: 4
 atk: 1500
