--- a/data/cards/yugipedia914726.yaml
+++ b/data/cards/yugipedia914726.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Effects unknown.
+    You can pay 1000 LP; Special Summon this card from your hand in Defense Position, and if you do, while it is face-up in the Monster Zone, you cannot Special Summon monsters, except Insect monsters. During your opponent's turn (Quick Effect): You can target 1 Insect monster you control; change its battle position. You can only use each effect of "Guard Mantis" once per turn.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ text:
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: ??? / Effect
+monster_type_line: Insect / Effect
 attribute: WIND
 level: 4
 atk: 1000
