--- a/data/cards/yugipedia914728.yaml
+++ b/data/cards/yugipedia914728.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Effects unknown.
+    You can Tribute 1 DARK monster that has a Level; increase the Levels of each "Baby Spider" you currently control by the Level the Tributed monster had on the field. You can pay half your LP, banish this card from your GY, and detach 1 material from your DARK Xyz Monster, then target 1 DARK monster in your GY; Special Summon it. You can only use each effect of "Baby Spider" once per turn.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ text:
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: ??? / Effect
+monster_type_line: Insect / Effect
 attribute: DARK
 level: 3
 atk: 0
