--- a/data/cards/yugipedia914729.yaml
+++ b/data/cards/yugipedia914729.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Effects unknown.
+    Cannot be Normal Summoned/Set. Must be Special Summoned by its own effect. When you Pendulum Summon a monster(s) and the total Pendulum Scales of the cards in your Pendulum Zone are higher than the total Levels of the Pendulum Summoned monsters: You can Special Summon this card from your hand, and if you do, destroy as many other cards on the field as possible, then you can place this card in your Pendulum Zone. Once per turn, if another face-up "D/D/D" monster(s) you control leaves the field by Spell effect: This card's ATK becomes 6000.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ text:
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: ??? / Pendulum / Effect
+monster_type_line: Fiend / Pendulum / Effect
 attribute: DARK
 level: 12
 atk: 3000
@@ -34,7 +34,7 @@ def: 3000
 pendulum_scale: 10
 pendulum_effect:
   en: |-
-    Effects unknown.
+    You can target 1 card in your opponent's Pendulum Zone; Special Summon this card, and if you do, place that card in your Pendulum Zone, and if you do that, destroy it during the End Phase of the next turn. You can only use this effect of "D/D/D/D Super-Dimensional Sovereign Emperor Zero Paradox" once per turn.
   de:
   es:
   fr:
