--- a/data/cards/yugipedia914730.yaml
+++ b/data/cards/yugipedia914730.yaml
@@ -15,7 +15,8 @@ name:
   zh-CN:
 text:
   en: |-
-    Effects unknown.
+    (This card is always treated as a "Crystal" card.)
+    Place 2 "Crystal Beast" monsters from your Deck face-up in your Spell & Trap Zone as Continuous Spells, then Special Summon 1 "Crystal Beast" monster from your hand or GY with a different name from those cards, and if you do, equip it with this card. When this card leaves the field, destroy that monster. You can only activate 1 "Golden Rule" per turn.
   de:
   es:
   fr:
@@ -27,6 +28,8 @@ text:
   zh-CN:
 card_type: Spell
 property: Equip
+series:
+- Crystal
 images:
 - index: 1
   image: GoldenRule-23PP-JP-OP.png
