--- a/data/tcg-speed-skill/yugipedia863765.yaml
+++ b/data/tcg-speed-skill/yugipedia863765.yaml
@@ -37,7 +37,7 @@ effect:
     Une fois par Duel, vous pouvez défausser 1 carte pour Invoquer par Fusion 1 Monstre Fusion "Rouage Ancients" depuis votre Extra Deck, en utilisant des monstres depuis votre Terrain comme Matériel Fusion. Si 1 de ces Matériels est un monstre "Golem Rouages Ancients", vous pouvez aussi utiliser des monstres depuis votre main et/ou Deck comme l'autre Matériel. Le reste de ce tour, votre adversaire ne reçoit aucun dommage. Les dommages de combat reçus par votre adversaire du Monstre Fusion sont divisés par deux.
   it:
   pt: |-
-    Uma vez por duelo, você pode descartar 1 card da sua mão para invocar por Invocação-Fusão 1 Monstro de Fusão "Mecanismo Antigo" do seu Deck Adicional, usando monstros do seu campo como Matérias de Fusão. Se 1 dessas matérias é um monstro "Golem do Mecanismo Antigo", você também pode usar monstros da sua mão e/ou do seu Deck como outra matéria. Seu oponente não sofre dano pelo resto deste turno. Qualquer dano de batalha que seu oponente sofrer desse Monstro de Fusão são diminuídos pela metade.
+    Uma vez por Duelo, você pode descartar 1 card para Invocar por Invocação-Fusão 1 Monstro de Fusão "Mecanismo Antigo" do seu Deck Adicional, usando monstros do seu campo como Matéria de Fusão. Se 1 dessas matérias for um monstro "Golem do Mecanismo Antigo", você também pode usar monstros da sua mão e/ou do Deck como as outras matérias. Seu oponente não sofre dano pelo resto deste turno. Qualquer dano de batalha que seu oponente sofrer desse Monstro de Fusão é diminuído pela metade.
   ja:
   ko:
   zh-TW:
