--- a/data/cards/yugipedia914727.yaml
+++ b/data/cards/yugipedia914727.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Effects unknown.
+    If you control no monsters, you can Special Summon this card (from your hand). You can Tribute this card; you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Xyz Monsters, also Special Summon up to 3 "Baby Spider" from your hand and/or Deck, and if you do, their Levels become 5, also they cannot be used as material for an Xyz Summon, except the Xyz Summon of a DARK monster. You can only use this effect of "Fissioning Mother Spider" once per turn.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ text:
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: ??? / Effect
+monster_type_line: Insect / Effect
 attribute: DARK
 level: 5
 atk: 0
