--- a/data/cards/kdb10112.yaml
+++ b/data/cards/kdb10112.yaml
@@ -51,7 +51,7 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg:
+  tcg: Not yet released
   ocg: Unlimited
 yugipedia_page_id: 187739
 fake_password: 10000040
