--- a/data/cards/kdb10113.yaml
+++ b/data/cards/kdb10113.yaml
@@ -47,7 +47,7 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg:
+  tcg: Not yet released
   ocg: Unlimited
 yugipedia_page_id: 177011
 fake_password: 10000030
