--- a/data/cards/92385016.yaml
+++ b/data/cards/92385016.yaml
@@ -12,7 +12,7 @@ name:
   ko: 루닉의 날개 무닌
   ko_rr: Runik-ui Nalgae Munin
   zh-TW:
-  zh-CN: 神碑之翼 姆宁
+  zh-CN: 神碑之翼 雾尼
 text:
   en: |-
     2 "Runick" monsters
@@ -40,8 +40,8 @@ text:
     ①: 이 카드가 엑스트라 덱에서의 특수 소환에 성공했을 경우, 패를 1장 버리고 발동할 수 있다. 덱에서 "루닉" 지속 마법 카드 1장을 패에 넣는다. ②: 자신 필드의, "루닉" 카드 또는 세트된 카드를 대상으로 하는 마법 / 함정 / 몬스터의 효과를 상대가 발동했을 때, 필드의 이 카드를 제외하고 발동할 수 있다. 그 발동을 무효로 하고 파괴한다. ③: 자신 / 상대의 엔드 페이즈에 발동한다. 자신은 1000 LP 회복한다.
   zh-TW:
   zh-CN: |-
-    「神碑」怪兽×2
-    ①：这张卡从额外卡组特殊召唤成功的场合，可以舍弃1张手牌发动。从卡组将1张「神碑」永续魔法卡加入手牌。②：以自己场上的「神碑」卡或者盖放的卡为对象的魔法、陷阱或怪兽的效果由对手发动时，可以将场上的这张卡除外发动。使其发动无效并破坏。③：自己或对手的结束阶段必定发动。自己恢复1000LP。
+    "神碑"怪兽×2
+    ①：此卡从额外牌组特殊召唤成功的情况下，舍弃1张手牌可以发动。从牌组将1张"神碑"永续魔法卡加入手牌。②：对手以自己场上的、"神碑"卡或被放置的卡为对象发动魔法・陷阱・怪兽的效果时，将场上的此卡除外可以发动。将该发动无效并破坏。③：在自己・对手的结束阶段发动。自己恢复1000LP。
 card_type: Monster
 monster_type_line: Fairy / Fusion / Effect
 attribute: LIGHT
@@ -92,6 +92,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: DBTM-SC038
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
