--- a/data/cards/yugipedia914729.yaml
+++ b/data/cards/yugipedia914729.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>Ｄ<rt>ディー</rt></ruby><ruby>Ｄ<rt>ディー</rt></ruby><ruby>Ｄ<rt>ディー</rt></ruby><ruby>Ｄ<rt>ディー</rt></ruby><ruby>超<rt>ちょう</rt></ruby><ruby>次<rt>じ</rt></ruby><ruby>元<rt>げん</rt></ruby><ruby>統<rt>とう</rt></ruby><ruby>皇<rt>おう</rt></ruby>ゼロ・パラドックス
   ja_romaji: Dīdīdīdī Chōjigentōō Zero Paradokkusu
-  ko:
+  ko: <ruby>D<rt>디</rt></ruby><ruby>D<rt>디</rt></ruby><ruby>D<rt>디</rt></ruby><ruby>D<rt>디</rt></ruby> 초차원통황 제로 패러독스
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   it:
   pt:
   ja:
-  ko:
+  ko: |-
+    이 카드는 통상 소환할 수 없으며, 이 카드의 효과로만 특수 소환할 수 있다. ①: 자신이 몬스터를 펜듈럼 소환했을 때, 자신의 펜듈럼 존의 펜듈럼 스케일의 합계가 펜듈럼 소환한 몬스터의 레벨의 합계를 넘었으면 발동할 수 있다. 이 카드를 패에서 특수 소환하고, 필드의 다른 카드를 전부 파괴한다. 그 후, 이 카드를 자신의 펜듈럼 존에 놓을 수 있다. ②: 1턴에 1번, 자신 필드의 다른 앞면 표시의 "DDD(디디디)" 몬스터가 마법 카드의 효과로 필드에서 벗어났을 경우에 발동한다. 이 카드의 공격력은 6000 이 된다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -41,7 +42,8 @@ pendulum_effect:
   it:
   pt:
   ja:
-  ko:
+  ko: |-
+    이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 상대의 펜듈럼 존의 카드 1장을 대상으로 하고 발동할 수 있다. 이 카드를 특수 소환하고, 대상 카드를 자신의 펜듈럼 존에 놓는다. 이 효과로 놓은 카드는 다음 턴의 엔드 페이즈에 파괴된다.
   zh-TW:
   zh-CN:
 series:
