--- a/data/cards/73347079.yaml
+++ b/data/cards/73347079.yaml
@@ -133,6 +133,9 @@ sets:
     set_name: Tournament Pack 2020 Vol.3
     rarities:
     - C
+  - set_number: SUB1-JP011
+    set_name: Secret Utility Box
+    rarities:
   ko:
   - set_number: SPWR-KR022
     set_name: 'Booster SP: Wing Raiders'
