--- a/data/cards/33158448.yaml
+++ b/data/cards/33158448.yaml
@@ -104,6 +104,9 @@ sets:
     set_name: Extra Pack 2018
     rarities:
     - Ultra Rare
+  - set_number: SUB1-JP012
+    set_name: Secret Utility Box
+    rarities:
   ko:
   - set_number: EP18-KR028
     set_name: Extra Pack 2018
