--- a/data/cards/31562086.yaml
+++ b/data/cards/31562086.yaml
@@ -12,7 +12,7 @@ name:
   ko: 루닉의 날끝
   ko_rr: Runik-ui Nalkkeut
   zh-TW:
-  zh-CN: 神碑的锋芒
+  zh-CN: 神碑之枪尖
 text:
   en: |-
     Activate 1 of these effects, but skip your next Battle Phase after activation;
@@ -54,9 +54,9 @@ text:
     ●엑스트라 덱에서 "루닉" 몬스터 1장을 엑스트라 몬스터 존에 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡1回合只能发动1张。①：可以从以下的效果中选择1个发动。这张卡发动后，跳过下次自己的战斗阶段。
-    ●从卡组将1张「神碑の穂先／神碑的锋芒」以外的「神碑」卡加入手牌。那之后，从对手的卡组上面将1张卡除外。
-    ●从额外卡组将1只「神碑」怪兽特殊召唤到额外怪兽区。
+    此卡名的卡1回合仅可发动1张。①：可从以下效果中选择1个发动。此卡发动后，跳过下一个自己的战斗阶段。
+    ●从牌组将1张"神碑之枪尖"以外的"神碑"卡加入手牌。然后，从对手的牌组上面将1张卡除外。
+    ●从额外牌组将1只"神碑"怪兽特殊召唤至额外怪兽区域。
 card_type: Spell
 property: Quick-Play
 series:
@@ -102,6 +102,11 @@ sets:
     - Super Rare
   ko:
   - set_number: DBTM-KR029
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: DBTM-SC029
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
