--- a/data/cards/71692913.yaml
+++ b/data/cards/71692913.yaml
@@ -12,7 +12,7 @@ name:
   ko: 상극의 마술사
   ko_rr: Sanggeuk-ui Masulsa
   zh-TW:
-  zh-CN: 相克之魔术师
+  zh-CN: 相克的魔术师
 text:
   en: |-
     Once per turn, during either player's turn: You can target 1 LIGHT monster on the field; that face-up monster has its effects negated until the end of this turn.
@@ -32,8 +32,7 @@ text:
     ①: 1턴에 1번, 필드의 빛 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 효과를 턴 종료시까지 무효로 한다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
-    1回合1次，以自己场上1只XYZ怪兽为对象才能发动。这个回合那只XYZ怪兽可以作为和那个阶级相同数值的等级的怪兽来成为XYZ召唤的素材。
-    怪兽效果：1回合1次，以场上1只光属性怪兽为对象才能发动。那只怪兽的效果直到回合结束时无效。这个效果在对方回合也能发动。
+    ①：1回合1次，以场上的1只光属性怪兽为对象可以发动。将该怪兽的效果直至回合结束时为止无效。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Spellcaster / Pendulum / Effect
 attribute: DARK
@@ -59,7 +58,8 @@ pendulum_effect:
   ko: |-
     ①: 1턴에 1번, 자신 필드의 엑시즈 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 턴에, 그 엑시즈 몬스터는, 그 랭크와 같은 수치의 레벨의 몬스터로 엑시즈 소환의 소재로 할 수 있다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：1回合1次，以自己场上的1只超量怪兽为对象可以发动。此回合，可将该超量怪兽当成与其阶级数值相同等级的怪兽，来作为超量召唤的素材。
 series:
 - Magician
 images:
@@ -164,6 +164,11 @@ sets:
     set_name: Legendary Gold Set
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: SD29-SC008
+    set_name: 'Structure Deck: Master of Pendulum'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
