--- a/data/cards/68957034.yaml
+++ b/data/cards/68957034.yaml
@@ -12,7 +12,7 @@ name:
   ko: 빛나는 화염의 루닉
   ko_rr: Bitna-neun Hwayeom-ui Runik
   zh-TW:
-  zh-CN: 辉炎的神碑
+  zh-CN: 闪耀火焰之神碑
 text:
   en: |-
     Activate 1 of these effects, but skip your next Battle Phase after activation;
@@ -54,9 +54,9 @@ text:
     ●엑스트라 덱에서 "루닉" 몬스터 1장을 엑스트라 몬스터 존에 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡1回合只能发动1张。①：可以从以下的效果中选择1个发动。这张卡发动后，跳过下次自己的战斗阶段。
-    ●可以以特殊召唤的对手场上的1只怪兽为对象发动。将那只怪兽破坏。那之后，从对手卡组上面将2张卡除外。
-    ●从额外卡组将1只「神碑」怪兽特殊召唤到额外怪兽区。
+    此卡名的卡1回合仅可发动1张。①：可从以下效果中选择1个发动。此卡发动后，跳过下一个自己的战斗阶段。
+    ●以被特殊召唤的对手场上的1只怪兽为对象可以发动。将该怪兽破坏。然后，从对手的牌组上面将2张卡除外。
+    ●从额外牌组将1只"神碑"怪兽特殊召唤至额外怪兽区域。
 card_type: Spell
 property: Quick-Play
 series:
@@ -97,6 +97,11 @@ sets:
     - Super Rare
   ko:
   - set_number: DBTM-KR030
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: DBTM-SC030
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
