--- a/data/cards/65477143.yaml
+++ b/data/cards/65477143.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>劇<rt>げき</rt></ruby><ruby>団<rt>だん</rt></ruby>－リバティ・ドラマチスト
   ja_romaji: Makai Gekidan - Ribati Doramachisuto
-  ko:
+  ko: 마계극단-리버티 드라마티스트
   ko_rr:
   zh-TW:
   zh-CN: 魔界剧团-自由剧作家
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＰゾーンからの特殊召喚に成功した場合に発動する。このカードの元々の持ち主は、自身のデッキから「魔界台本」魔法カード３枚を相手に見せ、相手はその中からランダムに１枚選ぶ。そのカード１枚を自身のフィールドにセットし、残りのカードはデッキに戻す。この効果でセットしたカードはエンドフェイズに破壊される。②：このカードが破壊された場合に発動できる。自分の墓地から「魔界台本」魔法カード１枚を選んでデッキに戻す。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 몬스터 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 펜듈럼 존에서의 특수 소환에 성공했을 경우에 발동한다. 이 카드의 원래 주인은, 자기 덱에서 "마계대본" 마법 카드 3장을 상대에게 보여주고, 상대는 그 중에서 무작위로 1장 고른다. 그 카드 1장을 자기 필드에 세트하고, 남은 카드는 덱으로 되돌린다. 이 효과로 세트한 카드는 엔드 페이즈에 파괴된다. ②: 이 카드가 파괴되었을 경우에 발동할 수 있다. 자신 묘지에서 "마계대본" 마법 카드 1장을 고르고 덱으로 되돌린다.
   zh-TW:
   zh-CN: |-
     ←8 【灵摆】 8→
@@ -50,7 +51,8 @@ pendulum_effect:
   pt:
   ja: |-
     このカード名のＰ効果は１ターンに１度しか使用できない。①：自分または相手のモンスターの攻撃宣言時、手札を１枚捨てて発動できる。このカードを相手フィールドに特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 또는 상대 몬스터의 공격 선언시, 패를 1장 버리고 발동할 수 있다. 이 카드를 상대 필드에 특수 소환한다.
   zh-TW:
   zh-CN:
 series:
