--- a/data/cards/00269012.yaml
+++ b/data/cards/00269012.yaml
@@ -153,6 +153,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts of Chaos'
     rarities:
     - Common
+  - set_number: 23TP-JP113
+    set_name: Tournament Pack 2023 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: CPL1-KR025
     set_name: 'Collectors Pack: Duelist of Legend Version'
