--- a/data/cards/02347656.yaml
+++ b/data/cards/02347656.yaml
@@ -43,7 +43,11 @@ series:
 - Labrynth
 images:
 - index: 1
+  image: '  LovelyLabrynthoftheSilverCastle-DBTM-JP-UR.png   '
+  illustration: LovelyLabrynthoftheSilverCastle-OW.png
+- index: '1.1'
   image: LovelyLabrynthoftheSilverCastle-TAMA-EN-UR-1E.png
+  illustration: LovelyLabrynthoftheSilverCastle-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: TAMA-EN014
