--- a/data/cards/11674673.yaml
+++ b/data/cards/11674673.yaml
@@ -108,6 +108,10 @@ sets:
     - Super Rare
     - Secret Rare
     - 20th Secret Rare
+  - set_number: 23TP-JP112
+    set_name: Tournament Pack 2023 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: CYHO-KR035
     set_name: Cybernetic Horizon
