--- a/data/cards/64880894.yaml
+++ b/data/cards/64880894.yaml
@@ -107,6 +107,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: 23TP-JP108
+    set_name: Tournament Pack 2023 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: PP11-KR005
     set_name: Premium Pack Vol.11
