--- a/data/cards/17086528.yaml
+++ b/data/cards/17086528.yaml
@@ -12,7 +12,7 @@ name:
   ko: 상생의 마술사
   ko_rr: Sangsaeng-ui Masulsa
   zh-TW:
-  zh-CN: 相生之魔术师
+  zh-CN: 相生的魔术师
 text:
   en: |-
     Your opponent takes no battle damage from attacks involving this card. Once per turn: You can target 1 other face-up monster you control; this card's ATK becomes equal to that monster's current ATK, until the end of this turn.
@@ -32,7 +32,7 @@ text:
     ①: 이 카드의 전투로 발생하는 상대에게로의 전투 데미지는 0 이 된다. ②: 1턴에 1번, 이 카드 이외의 자신 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드의 공격력은 턴 종료시까지 그 몬스터와 같아진다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡的战斗发生的对对方的战斗伤害变成0。②：1回合1次，以这张卡以外的自己场上1只怪兽为对象才能发动。这张卡的攻击力直到回合结束时变成和那只怪兽相同。
+    ①：因此卡的战斗对对手造成的战斗伤害变为0。②：1回合1次，以自己场上此卡以外的1只怪兽为对象可以发动。此卡的攻击力直至回合结束时为止，变为与该怪兽相同。
 card_type: Monster
 monster_type_line: Spellcaster / Pendulum / Effect
 attribute: LIGHT
@@ -59,7 +59,7 @@ pendulum_effect:
     ①: 1턴에 1번, 자신 필드의, 엑시즈 몬스터 1장과 레벨 5 이상의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 엑시즈 몬스터의 랭크는 턴 종료시까지, 그 레벨 5 이상 몬스터의 레벨의 수치와 같아진다. ②: 자신 필드의 카드가 상대 필드보다 많을 경우, 이 카드의 펜듈럼 스케일은 4 가 된다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，以自己场上1只XYZ怪兽和1只5星以上的怪兽为对象才能发动。那只XYZ怪兽的阶级直到回合结束时变成和那只5星以上的怪兽的等级数值相同。②：自己场上的卡比对方场上多的场合，这张卡的灵摆刻度变成4。
+    ①：1回合1次，以自己场上的1只超量怪兽和1只等级5以上的怪兽为对象可以发动。该超量怪兽的阶级直至回合结束时为止，变为与该等级5以上怪兽的等级相同的数值。②：自己场上的卡多于对手场上的情况下，此卡的灵摆刻度变为4。
 series:
 - Magician
 images:
@@ -164,6 +164,11 @@ sets:
     set_name: Legendary Gold Set
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: SD29-SC009
+    set_name: 'Structure Deck: Master of Pendulum'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
