--- a/data/cards/55990317.yaml
+++ b/data/cards/55990317.yaml
@@ -40,8 +40,8 @@ text:
     ①: 이 카드가 엑스트라 덱에서의 특수 소환에 성공했을 경우, 패를 1장 버리고 발동할 수 있다. 덱에서 "루닉" 필드 마법 카드 1장을 패에 넣는다. ②: 이 카드 이외의 자신 필드의 카드가 효과로 파괴될 경우, 대신에 필드의 이 카드를 제외할 수 있다. ③: 필드의 이 카드가 전투 / 효과로 파괴되었을 경우에 발동한다. 이 카드를 주인의 엑스트라 덱으로 되돌린다.
   zh-TW:
   zh-CN: |-
-    「神碑」怪兽×2
-    ①：这张卡从额外卡组特殊召唤成功的场合，可以舍弃1张手牌发动。从卡组将1张「神碑」场地魔法卡加入手牌。②：这张卡以外的自己场上的卡要被效果破坏的场合，可以将场上的这张卡除外作为代替。③：场上的这张卡被战斗或效果破坏的场合可以发动。这张卡返回持有者的额外卡组。
+    "神碑"怪兽×2
+    ①：此卡从额外牌组特殊召唤成功的情况下，舍弃1张手牌可以发动。从牌组将1张"神碑"场地魔法卡加入手牌。②：此卡以外的自己场上的卡将被效果破坏的情况下，可以将场上的此卡除外作为代替。③：场上的此卡因战斗・效果被破坏的情况下发动。将此卡放回持有者的额外牌组。
 card_type: Monster
 monster_type_line: Fairy / Fusion / Effect
 attribute: LIGHT
@@ -87,6 +87,11 @@ sets:
     - Super Rare
   ko:
   - set_number: DBTM-KR037
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: DBTM-SC037
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
