--- a/data/cards/yugipedia916163.yaml
+++ b/data/cards/yugipedia916163.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    This card can attack while in face-up Defense Position. If it does, apply its DEF for damage calculation. If a "Superheavy Samurai" monster(s) you control would be destroyed by battle or card effect, you can destroy 1 "Superheavy Samurai" card you control instead. Once per turn, if your opponent activates a Spell/Trap Card or effect: You can draw cards until you have 3 cards in your hand.
+    This card can attack while in face-up Defense Position. If it does, apply its DEF for damage calculation. If a "Superheavy Samurai" monster(s) you control would be destroyed by battle or card effect, you can destroy 1 "Superheavy Samurai" card you control instead. Once per turn, if your opponent activates a Spell/Trap Card or effect: You can draw until you have 3 cards in your hand.
   de:
   es:
   fr:
@@ -29,19 +29,28 @@ text:
 card_type: Monster
 monster_type_line: Machine / Synchro / Effect
 attribute: EARTH
-rank: 12
+level: 12
 atk: 2100
 def: 4000
 series:
 - Superheavy Samurai
 images:
 - index: 1
-  image: SuperheavySamuraiTenjinMasurao-CYAC-JP-OP.png
+  image: SuperheavySamuraiOverlordMasurao-CYAC-JP-OP.png
 sets:
   ja:
   - set_number: CYAC-JP039
     set_name: Cyberstorm Access
     rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Prismatic Secret Rare
+  - set_number: CYAC-JP039
+    set_name: Cyberstorm Access +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
