--- a/data/cards/yugipedia916166.yaml
+++ b/data/cards/yugipedia916166.yaml
@@ -9,27 +9,28 @@ name:
   pt:
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>童<rt>どう</rt></ruby>ワカ－<ruby>Ｕ<rt>ウ</rt></ruby><ruby>４<rt>シ</rt></ruby>
   ja_romaji: Chōjū Shindō Waka-Ushi
-  ko:
+  ko: 초중신동 와카-<ruby>U<rt>우</rt></ruby><ruby>4<rt>시</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    If you have no Spells/Traps in your GY: You can discard 1 monster; Special Summon 1 "Superheavy Samurai" monster from your hand or Deck in Defense Position, also you cannot Special Summon monsters for the rest of this turn, except "Superheavy Samurai" monsters. If this card is used as Synchro Material and added to the Extra Deck face-up: You can place it in your Pendulum Zone. You can only use each monster effect of "Superheavy Samurai Prodigy Wakaushi" once per turn.
+    If you have no Spells/Traps in your GY: You can discard 1 monster; Special Summon 1 "Superheavy Samurai" monster from your hand or Deck in Defense Position, also you cannot Special Summon monsters for the rest of this turn, except "Superheavy Samurai" monsters. If this card is used as Synchro Material and added to the Extra Deck face-up: You can place this card in your Pendulum Zone. You can only use each monster effect of "Superheavy Samurai Prodigy Wakaushi" once per turn.
   de:
   es:
   fr:
   it:
   pt:
   ja:
-  ko:
+  ko: |-
+    이 카드명은 룰상 "초중무사" 카드로도 취급한다. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지에 마법 / 함정 카드가 존재하지 않을 경우, 패에서 몬스터 1장을 버리고 발동할 수 있다. 패 / 덱에서 "초중무사" 몬스터 1장을 수비 표시로 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 "초중무사" 몬스터밖에 특수 소환할 수 없다. ②: 이 카드가 싱크로 소재로서 엑스트라 덱에 앞면 표시로 넣어졌을 경우에 발동할 수 있다. 이 카드를 자신의 펜듈럼 존에 놓는다.
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: Machine / Tuner / Pendulum / Effect
+monster_type_line: Machine / Pendulum / Tuner / Effect
 attribute: DARK
 rank: 4
-atk: 1100
+atk: 1000
 def: 1500
 pendulum_scale: 8
 pendulum_effect:
@@ -41,7 +42,8 @@ pendulum_effect:
   it:
   pt:
   ja:
-  ko:
+  ko: |-
+    이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지에 마법 / 함정 카드가 존재하지 않을 경우에 발동할 수 있다. "초중신동 와카-U4(우시)" 이외의 "초중무사" 펜듈럼 몬스터 1장을 덱에서 고르고 자신의 펜듈럼 존에 놓는다. 그 후, 이 카드를 특수 소환한다.
   zh-TW:
   zh-CN:
 series:
