--- a/data/cards/yugipedia916167.yaml
+++ b/data/cards/yugipedia916167.yaml
@@ -9,26 +9,27 @@ name:
   pt:
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>僧<rt>そう</rt></ruby><ruby>兵<rt>へい</rt></ruby>ビッグベン－<ruby>Ｋ<rt>ケー</rt></ruby>
   ja_romaji: Chōjū Sōhei Biggu Ben-Kē
-  ko:
+  ko: 초중승병 빅벤-<ruby>K<rt>케이</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    If you have no Spells/Traps in your GY: You can send 1 "Superheavy Samurai Big Benkei" from your hand or Deck to the GY, and if you do, Special Summon this card from your hand. If this card is used as Synchro Material and added to the Extra Deck face-up: You can place it in your Pendulum Zone. You can only use each effect of "Superheavy Samurai Monk Warrior Big Benkei" once per turn.
+    If you have no Spells/Traps in your GY: You can send 1 "Superheavy Samurai Big Benkei" from your hand or Deck to the GY, and if you do, Special Summon this card from your hand. If this card is used as Synchro Material and added to the Extra Deck face-up: You can place this card in your Pendulum Zone. You can only use each effect of "Superheavy Samurai Monk Warrior Big Benkei" once per turn.
   de:
   es:
   fr:
   it:
   pt:
   ja:
-  ko:
+  ko: |-
+    이 카드명은 룰상 "초중무사" 카드로도 취급한다. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지에 마법 / 함정 카드가 존재하지 않을 경우에 발동할 수 있다. 패 / 덱에서 "초중무사 빅벤-K(케이)" 1장을 묘지로 보내고, 이 카드를 패에서 특수 소환한다. ②: 이 카드가 싱크로 소재로서 엑스트라 덱에 앞면 표시로 넣어졌을 경우에 발동할 수 있다. 이 카드를 자신의 펜듈럼 존에 놓는다.
   zh-TW:
   zh-CN:
 card_type: Monster
 monster_type_line: Machine / Pendulum / Effect
 attribute: EARTH
-rank: 8
+level: 8
 atk: 1000
 def: 3500
 pendulum_scale: 1
@@ -41,7 +42,8 @@ pendulum_effect:
   it:
   pt:
   ja:
-  ko:
+  ko: |-
+    이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "초중무사" 몬스터가 존재할 경우에 발동할 수 있다. 덱에서 "초중무사소울" 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN:
 series:
@@ -54,6 +56,7 @@ sets:
   - set_number: CYAC-JP007
     set_name: Cyberstorm Access
     rarities:
+    - Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
