--- a/data/cards/yugipedia916169.yaml
+++ b/data/cards/yugipedia916169.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can target 1 "Superheavy Samurai" monster you control; equip this card from your hand or field to it. It is treated as a Tuner. If you have no Spells/Traps in your GY while this card is equipped to a monster by its own effect: You can Special Summon this card. You can only use this effect of "Superheavy Samurai Soulgaia Booster" once per turn.
+    You can target 1 "Superheavy Samurai" monster you control; equip this card from your hand or field to that target. It is treated as a Tuner. If you have no Spells/Traps in your GY while this card is equipped to a monster by its own effect: You can Special Summon this card. You can only use this effect of "Superheavy Samurai Soulgaia Booster" once per turn.
   de:
   es:
   fr:
