--- a/data/cards/yugipedia916160.yaml
+++ b/data/cards/yugipedia916160.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>将<rt>しょう</rt></ruby>シャナ－<ruby>Ｏ<rt>オー</rt></ruby>
-  ja_romaji: Chōjū Shinshō Shana-Ō
+  ja_romaji: Chōjūshinshō Shana-Ō
   ko: 초중신장 샤나-<ruby>O<rt>오</rt></ruby>
   ko_rr:
   zh-TW:
