--- a/data/cards/yugipedia916166.yaml
+++ b/data/cards/yugipedia916166.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>童<rt>どう</rt></ruby>ワカ－<ruby>Ｕ<rt>ウ</rt></ruby><ruby>４<rt>シ</rt></ruby>
-  ja_romaji: Chōjū Shindō Waka-Ushi
+  ja_romaji: Chōjūshindō Waka-Ushi
   ko: 초중신동 와카-<ruby>U<rt>우</rt></ruby><ruby>4<rt>시</rt></ruby>
   ko_rr:
   zh-TW:
