--- a/data/cards/yugipedia916163.yaml
+++ b/data/cards/yugipedia916163.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>神<rt>じん</rt></ruby>マスラ－<ruby>Ｏ<rt>オー</rt></ruby>
-  ja_romaji: Chōjū Tenjin Masura-Ō
+  ja_romaji: Chōjūtenjin Masura-Ō
   ko:
   ko_rr:
   zh-TW:
