--- a/data/cards/yugipedia916160.yaml
+++ b/data/cards/yugipedia916160.yaml
@@ -48,6 +48,7 @@ pendulum_effect:
     이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 상대 몬스터의 공격 선언시에 발동할 수 있다. 이 카드를 특수 소환한다. 자신 묘지에 마법 / 함정 카드가 존재하지 않을 경우, 추가로 그 상대 몬스터는 공격력이 0 이 되고, 효과는 무효화된다.
   zh-TW:
   zh-CN:
+materials: 1 Tuner + 1 or more non-Tuner monsters
 series:
 - Superheavy Samurai
 images:
