--- a/data/cards/yugipedia916163.yaml
+++ b/data/cards/yugipedia916163.yaml
@@ -32,6 +32,7 @@ attribute: EARTH
 level: 12
 atk: 2100
 def: 4000
+materials: 1 Tuner + 1 or more non-Tuner monsters
 series:
 - Superheavy Samurai
 images:
