--- a/data/rush/18253.yaml
+++ b/data/rush/18253.yaml
@@ -45,7 +45,7 @@ level: 3
 atk: 1000
 def: 1000
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: TaibanBluemai-RDKP11-JP-C.png
