--- a/data/rush/18254.yaml
+++ b/data/rush/18254.yaml
@@ -45,7 +45,7 @@ level: 4
 atk: 1200
 def: 0
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: BluegrassStealer-RDKP11-JP-SR.png
