--- a/data/rush/18258.yaml
+++ b/data/rush/18258.yaml
@@ -45,7 +45,7 @@ level: 7
 atk: 2500
 def: 1500
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: BandijooftheBattleBallad-RDKP11-JP-UR.png
