--- a/data/rush/18283.yaml
+++ b/data/rush/18283.yaml
@@ -41,7 +41,7 @@ effect:
 card_type: Spell
 property: Equip
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: FlameArmsFretberge-RDKP11-JP-C.png
