--- a/data/rush/18284.yaml
+++ b/data/rush/18284.yaml
@@ -41,7 +41,7 @@ effect:
 card_type: Spell
 property: Equip
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: HeavyArmsDoubleNexcalibur-RDKP11-JP-SR.png
