--- a/data/rush/18294.yaml
+++ b/data/rush/18294.yaml
@@ -41,7 +41,7 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: ForceofThief-RDKP11-JP-C.png
