--- a/rush.yaml
+++ b/rush.yaml
@@ -76325,7 +76325,7 @@ level: 2
 atk: 600
 def: 600
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: Robbarim-RDKP11-JP-C.png
@@ -76371,7 +76371,7 @@ level: 4
 atk: 1500
 def: 0
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: AmplerGlee-RDKP11-JP-C.png
@@ -77019,7 +77019,7 @@ level: 2
 atk: 700
 def: 400
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: RadrogueMael-RDKP11-JP-R.png
@@ -77078,7 +77078,7 @@ level: 3
 atk: 1000
 def: 1000
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: TaibanBluemai-RDKP11-JP-C.png
@@ -77137,7 +77137,7 @@ level: 4
 atk: 1200
 def: 0
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: BluegrassStealer-RDKP11-JP-SR.png
@@ -77196,7 +77196,7 @@ level: 5
 atk: 1600
 def: 0
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: HeelHealer-RDKP11-JP-C.png
@@ -77255,7 +77255,7 @@ level: 7
 atk: 2200
 def: 0
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: ProphecyPhraseoftheColorsoftheWind-RDKP11-JP-UR.png
@@ -77321,7 +77321,7 @@ level: 7
 atk: 2500
 def: 0
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: AsportPiratetheWindCrusher-RDKP11-JP-UR.png
@@ -77381,7 +77381,7 @@ level: 7
 atk: 2500
 def: 1500
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: BandijooftheBattleBallad-RDKP11-JP-UR.png
@@ -78830,7 +78830,7 @@ effect:
 card_type: Spell
 property: Equip
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: FlameArmsFretberge-RDKP11-JP-C.png
@@ -78885,7 +78885,7 @@ effect:
 card_type: Spell
 property: Equip
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: HeavyArmsDoubleNexcalibur-RDKP11-JP-SR.png
@@ -78940,7 +78940,7 @@ effect:
 card_type: Spell
 property: Equip
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: SacredArmsStrabishop-RDKP11-JP-C.png
@@ -79425,7 +79425,7 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- Psychic Bandit
+- Shaman Bandit
 images:
 - index: 1
   image: ForceofThief-RDKP11-JP-C.png
