--- a/data/cards/02347656.yaml
+++ b/data/cards/02347656.yaml
@@ -12,7 +12,7 @@ name:
   ko: 백은 성의 라뷰린스
   ko_rr: Baek-eun Seong-ui Rabyurinseu
   zh-TW:
-  zh-CN: 白银城的拉比林斯
+  zh-CN: 白银城的迷宫主・拉比丽斯
 text:
   en: |-
     Your opponent cannot activate monster effects in response to the activation of your Normal Trap Cards. You can only use each of the following effects of "Lovely Labrynth of the Silver Castle" once per turn. You can target 1 Normal Trap in your GY; Set it to your field, but it cannot be activated unless you control a Fiend monster. If another monster(s) leaves the field by your Normal Trap effect (except during the Damage Step): You can destroy 1 card in your opponent's hand (at random) or their field.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신의 일반 함정 카드의 발동에 대하여, 상대는 몬스터의 효과를 발동할 수 없다. ②: 자신 묘지의 일반 함정 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 자신 필드에 세트한다. 이 효과로 세트한 카드는, 자신 필드에 악마족 몬스터가 존재하지 않을 경우에는 발동할 수 없다. ③: 자신의 일반 함정 카드의 효과로 몬스터가 필드에서 벗어났을 경우에 발동할 수 있다. 상대의 패 / 필드의 카드 1장을 고르고 파괴한다(패에서는 무작위로 고른다).
   zh-TW:
   zh-CN: |-
-    这个卡名的②③效果1回合各能使用1次。①：对手不能对应自己的通常陷阱卡的发动来发动怪兽的效果。②：可以以自己墓地的1张通常陷阱卡为对象发动。将那张卡盖放到自己的场上。用这个效果盖放的卡在自己场上没有恶魔族怪兽存在的场合不能发动。③：自己的通常陷阱卡的效果使怪兽从场上离开的场合可以发动。选对手的手牌或场上的1张卡破坏（从手牌是随机选）。
+    此卡名的②③效果1回合仅可各使用1次。①：应对自己的通常陷阱卡的发动，对手不可发动怪兽的效果。②：以自己墓地的1张通常陷阱卡为对象可以发动。将该卡放置在自己场上。以此效果放置的卡，在自己场上不存在恶魔族怪兽的情况下不可发动。③：怪兽因自己通常陷阱卡的效果从场上离开的情况下可以发动。从对手的手牌・场上挑选1张卡破坏（从手牌是随机挑选）。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
@@ -90,6 +90,11 @@ sets:
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Ultra Rare
+    - Secret Rare
+  zh-CN:
+  - set_number: DBTM-SC014
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
