--- a/data/cards/27847700.yaml
+++ b/data/cards/27847700.yaml
@@ -39,10 +39,12 @@ series:
 images:
 - index: 1
   image: '  Polymerization-15AX-JP-MLR.png'
-  illustration: '    Polymerization-TF04-JP-VG.jpg'
+  illustration: '    Polymerization-TF05-JP-VG-2-artwork.png'
 - index: '1.1'
   image: Polymerization-HAC1-EN-DUPR-1E.png
   illustration: Polymerization-TF04-EN-VG.jpg
+- index: '1.2'
+  image: Polymerization-PGB1-JP-MLR.png
 sets:
   en:
   - set_number: DPYG-EN020
