--- a/data/rush/17281.yaml
+++ b/data/rush/17281.yaml
@@ -1,6 +1,6 @@
 konami_id: 17281
 name:
-  en: Boosturtle the Accelerated Turtle
+  en: Boosturtle
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 1000
 def: 500
 images:
 - index: 1
-  image: BoosturtletheAcceleratedTurtle-RDKP08-JP-C.png
+  image: Boosturtle-RDKP08-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP005
