--- a/data/rush/17299.yaml
+++ b/data/rush/17299.yaml
@@ -1,6 +1,6 @@
 konami_id: 17299
 name:
-  en: Spyturtle the Observational Turtle
+  en: Spyturtle
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 800
 def: 1300
 images:
 - index: 1
-  image: SpyturtletheObservationalTurtle-RDSD05-JP-C.png
+  image: Spyturtle-RDSD05-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP023
