--- a/rush.yaml
+++ b/rush.yaml
@@ -53093,7 +53093,7 @@ yugipedia_page_id: 846120
 ---
 konami_id: 17281
 name:
-  en: Boosturtle the Accelerated Turtle
+  en: Boosturtle
   de:
   es:
   fr:
@@ -53127,7 +53127,7 @@ atk: 1000
 def: 500
 images:
 - index: 1
-  image: BoosturtletheAcceleratedTurtle-RDKP08-JP-C.png
+  image: Boosturtle-RDKP08-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP005
@@ -54191,7 +54191,7 @@ yugipedia_page_id: 844067
 ---
 konami_id: 17299
 name:
-  en: Spyturtle the Observational Turtle
+  en: Spyturtle
   de:
   es:
   fr:
@@ -54239,7 +54239,7 @@ atk: 800
 def: 1300
 images:
 - index: 1
-  image: SpyturtletheObservationalTurtle-RDSD05-JP-C.png
+  image: Spyturtle-RDSD05-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP023
