--- a/data/rush/16325.yaml
+++ b/data/rush/16325.yaml
@@ -1,6 +1,6 @@
 konami_id: 16325
 name:
-  en: Andoll
+  en: Endoll
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: Andoll-RDSBD4-JP-C.png
+  image: Endoll-RDSBD4-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP018
