--- a/data/rush/16311.yaml
+++ b/data/rush/16311.yaml
@@ -1,6 +1,6 @@
 konami_id: 16311
 name:
-  en: Enguarding Mermaid
+  en: Guarding Mermaid
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 1200
 def: 0
 images:
 - index: 1
-  image: EnguardingMermaid-RDKP05-JP-C.png
+  image: GuardingMermaid-RDKP05-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP004
