--- a/data/rush/16312.yaml
+++ b/data/rush/16312.yaml
@@ -1,6 +1,6 @@
 konami_id: 16312
 name:
-  en: Kanan the Warden Mistress
+  en: Kanan the Security Guard
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 1400
 def: 0
 images:
 - index: 1
-  image: KanantheWardenMistress-RDMRP1-JP-C.png
+  image: KanantheSecurityGuard-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP005
