--- a/data/rush/16348.yaml
+++ b/data/rush/16348.yaml
@@ -1,6 +1,6 @@
 konami_id: 16348
 name:
-  en: Royal Rebel's Live Arena
+  en: Royal Rebel's Arena
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Royal Rebel's
 images:
 - index: 1
-  image: RoyalRebelsLiveArena-RDSBD5-JP-C.png
+  image: RoyalRebelsArena-RDSBD5-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP042
