--- a/data/rush/16351.yaml
+++ b/data/rush/16351.yaml
@@ -1,6 +1,6 @@
 konami_id: 16351
 name:
-  en: Prison Island Ane Go Rock
+  en: Prison Island - Cell Block 5 & 6
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: PrisonIslandAneGoRock-RDSD05-JP-C.png
+  image: PrisonIslandCellBlock56-RDSD05-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP045
