--- a/rush.yaml
+++ b/rush.yaml
@@ -27808,7 +27808,7 @@ yugipedia_page_id: 799210
 ---
 konami_id: 16311
 name:
-  en: Enguarding Mermaid
+  en: Guarding Mermaid
   de:
   es:
   fr:
@@ -27842,7 +27842,7 @@ atk: 1200
 def: 0
 images:
 - index: 1
-  image: EnguardingMermaid-RDKP05-JP-C.png
+  image: GuardingMermaid-RDKP05-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP004
@@ -27858,7 +27858,7 @@ yugipedia_page_id: 805317
 ---
 konami_id: 16312
 name:
-  en: Kanan the Warden Mistress
+  en: Kanan the Security Guard
   de:
   es:
   fr:
@@ -27892,7 +27892,7 @@ atk: 1400
 def: 0
 images:
 - index: 1
-  image: KanantheWardenMistress-RDMRP1-JP-C.png
+  image: KanantheSecurityGuard-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP005
@@ -28626,7 +28626,7 @@ yugipedia_page_id: 802828
 ---
 konami_id: 16325
 name:
-  en: Andoll
+  en: Endoll
   de:
   es:
   fr:
@@ -28676,7 +28676,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: Andoll-RDSBD4-JP-C.png
+  image: Endoll-RDSBD4-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP018
@@ -30226,7 +30226,7 @@ yugipedia_page_id: 803005
 ---
 konami_id: 16348
 name:
-  en: Royal Rebel's Live Arena
+  en: Royal Rebel's Arena
   de:
   es:
   fr:
@@ -30272,7 +30272,7 @@ series:
 - Royal Rebel's
 images:
 - index: 1
-  image: RoyalRebelsLiveArena-RDSBD5-JP-C.png
+  image: RoyalRebelsArena-RDSBD5-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP042
@@ -30424,7 +30424,7 @@ yugipedia_page_id: 801895
 ---
 konami_id: 16351
 name:
-  en: Prison Island Ane Go Rock
+  en: Prison Island - Cell Block 5 & 6
   de:
   es:
   fr:
@@ -30468,7 +30468,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: PrisonIslandAneGoRock-RDSD05-JP-C.png
+  image: PrisonIslandCellBlock56-RDSD05-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP045
