--- a/data/cards/62517849.yaml
+++ b/data/cards/62517849.yaml
@@ -12,7 +12,7 @@ name:
   ko: No.39 유토피아 더블
   ko_rr: Neombeojeu Samsipgu Yutopia Deobeul
   zh-TW:
-  zh-CN: No.39 希望皇 霍普·翻倍
+  zh-CN: 编号39 希望皇霍普加倍
 text:
   en: |-
     2 Level 4 monsters
@@ -40,9 +40,8 @@ text:
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 덱에서 "더블 업 찬스" 1장을 패에 넣는다. 그 후, "No.39 유토피아 더블" 이외의 "유토피아" 엑시즈 몬스터 1장을, 자신 필드의 이 카드 위에 겹쳐 엑시즈 소환으로 취급하고 엑스트라 덱에서 특수 소환한다. 이 효과로 특수 소환한 몬스터의 공격력은 배가 되고, 직접 공격할 수 없다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
-    4星怪兽×2
-    这个卡名的效果1回合只能使用1次。
-    ①：把这张卡1个超量素材取除才能发动。从卡组把1张「翻倍机会」加入手卡。那之后，「No.39 希望皇 霍普·翻倍」以外的1只「希望皇 霍普」超量怪兽在自己场上的这张卡上面重叠当作超量召唤从额外卡组特殊召唤。这个效果特殊召唤的怪兽的攻击力变成2倍，不能直接攻击。这个效果在对方回合也能发动。
+    等级4怪兽×2
+    此卡名的效果1回合仅可使用1次。①：去除此卡的1个超量素材可以发动。从牌组将1张"加倍机会"加入手牌。然后，将"编号39 希望皇霍普加倍"以外的1只"希望皇霍普"超量怪兽重叠在自己场上的此卡上面，视为超量召唤从额外牌组特殊召唤。以此效果特殊召唤的怪兽的攻击力变为两倍，不可直接攻击。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Warrior / Xyz / Effect
 attribute: LIGHT
@@ -106,6 +105,11 @@ sets:
     set_name: "Structure Deck: Overlay Universe Emperor's Door Pack"
     rarities:
     - Super Rare
+    - Secret Rare
+  zh-CN:
+  - set_number: SD42-SCP04
+    set_name: "Structure Deck: Overlay Universe Emperor's Door Pack"
+    rarities:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
