--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -4785,7 +4785,7 @@ Labrynth:
   ko: 라뷰린스
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 拉比丽斯
 Phantasm Spiral:
   de: Phantasmaspiral
   es: Fantasma Espiral
@@ -5565,7 +5565,7 @@ Welcome Labrynth:
   ko: 웰컴 라뷰린스
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 欢迎光临拉比丽斯
 Empowered Warrior:
   de: Ermächtigte Krieger
   es: Guerrero/a Fortalecido/a
