--- a/data/cards/05380979.yaml
+++ b/data/cards/05380979.yaml
@@ -12,7 +12,7 @@ name:
   ko: 웰컴 라뷰린스
   ko_rr: Welkeom Rabyurinseu
   zh-TW:
-  zh-CN: 白银城欢迎你
+  zh-CN: 欢迎光临拉比丽斯
 text:
   en: |-
     Special Summon 1 "Labrynth" monster from your Deck, also until the end of the next turn after this card resolves, you cannot Special Summon monsters from the Deck or Extra Deck, except Fiend monsters. If a monster leaves the field by your Normal Trap effect, while this card is in your GY, except the turn it was sent there: You can Set this card. You can only use each effect of "Welcome Labrynth" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 덱에서 "라뷰린스" 몬스터 1장을 특수 소환한다. 이 카드의 발동 후, 다음 턴의 종료시까지 자신은 악마족 몬스터밖에 덱 / 엑스트라 덱에서 특수 소환할 수 없다. ②: 이 카드가 묘지에 존재하는 상태에서, 자신의 일반 함정 카드의 효과로 몬스터가 필드에서 벗어났을 경우에 발동할 수 있다. 이 카드를 자신 필드에 세트한다. 이 효과는 이 카드가 묘지로 보내진 턴에는 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：从卡组特殊召唤1只「ラビュリンス／白银城」怪兽。这张卡发动后，直到下个回合结束时自己从卡组、额外卡组特殊召唤的只能是恶魔族怪兽。②：这张卡在墓地存在的状态下，自己的通常陷阱卡的效果使怪兽从场上离开的场合可以发动。将这张卡盖放到自己的场上。这个效果在这张卡送入墓地的回合不能发动。
+    此卡名的①②效果1回合仅可各使用1次。①：从牌组将1只"拉比丽斯"怪兽特殊召唤。此卡发动后，直至下个回合结束时为止，自己从牌组・额外牌组仅可特殊召唤恶魔族怪兽。②：此卡存在于墓地的状态下，怪兽因自己通常陷阱卡的效果从场上离开的情况下可以发动。将此卡放置在自己场上。此效果在此卡被送至墓地的回合不可发动。
 card_type: Trap
 property: Normal
 series:
@@ -74,6 +74,11 @@ sets:
     - Super Rare
   ko:
   - set_number: DBTM-KR023
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: DBTM-SC023
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
