--- a/data/cards/19642889.yaml
+++ b/data/cards/19642889.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Durante cada uma das suas End Phases, destrua esta carta a menos que você envie 1 "Iron Core of Koa'ki Meiru" da sua mão ao Cemitério ou revele 1 Normal Trap Card na sua mão. Se esta carta batalha com um monstro LIGHT ou DARK, negue os efeitos daquele monstro durante a Battle Phase, enquanto esta carta permancer no campo.
   ja: |-
-    このカードのコントローラーは自分のエンドフェイズ毎に手札から「コアキメイルの鋼核」を１枚墓地へ送るか、手札の通常罠カード１枚を相手に見せる。または、どちらも行わずにこのカードを破壊する。このカードが光属性または闇属性モンスターと戦闘を行う場合、バトルフェイズの間だけそのモンスターの効果は無効化される。
+    このカードのコントローラーは自分のエンドフェイズ毎に、手札から「コアキメイルの鋼核」１枚を墓地へ送るか、手札の通常罠カード１枚を相手に見せる。または、どちらも行わずにこのカードを破壊する。このカードが光属性または闇属性のモンスターと戦闘を行う場合、バトルフェイズの間だけそのモンスターの効果は無効化される。
   ko: |-
     이 카드의 컨트롤러는 자신 엔드 페이즈마다 패에서 '코아키메일의 강철핵' 1장을 묘지로 보내거나, 패에서 일반 함정 카드 1장을 상대에게 보여준다. 또는, 어느쪽도 실행하지 않고 이 카드를 파괴한다. 이 카드가 빛 속성 또는 어둠 속성 몬스터와 전투를 실행할 경우, 배틀 페이즈 동안에만 그 몬스터의 효과는 무효화된다.
   zh-TW:
