--- a/data/cards/75730490.yaml
+++ b/data/cards/75730490.yaml
@@ -12,7 +12,7 @@ name:
   ko: 라뷰린스 서번츠 아리안느
   ko_rr: Rabyurinseu Seobeoncheu Arianneu
   zh-TW:
-  zh-CN: 白银城的仆人 阿里安奴
+  zh-CN: 拉比丽斯的仆从 亚莉安努
 text:
   en: |-
     You can send 1 Normal Trap from your hand or that's Set on your field to the GY; Special Summon 1 Level 4 or lower Fiend monster from your Deck in Defense Position, except "Ariane the Labrynth Servant". If another monster(s) leaves the field by your Normal Trap effect (except during the Damage Step): You can draw 1 card, then you can apply this effect.
@@ -44,7 +44,8 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패 및 자신 필드에 세트된 카드 중에서, 일반 함정 카드 1장을 묘지로 보내고 발동할 수 있다. 덱에서 "라뷰린스 서번츠 아리안느" 이외의 레벨 4 이하의 악마족 몬스터 1장을 수비 표시로 특수 소환한다. ②: 자신의 일반 함정 카드의 효과로 몬스터가 필드에서 벗어났을 경우에 발동할 수 있다. 자신은 덱에서 1장 드로우한다. 그 후, 이하의 효과를 적용할 수 있다. ●패에서, 악마족 몬스터 1장을 특수 소환하거나, 마법 / 함정 카드 1장을 세트한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：可以从手牌以及自己场上盖放的卡之中，将1张通常陷阱卡送入墓地发动。从卡组以守备表示特殊召唤1只「白銀城の召使い アリアーヌ／白银城的仆人 阿里安奴」以外的等级4以下的恶魔族怪兽。②：自己的通常陷阱卡的效果使怪兽从场上离开的场合可以发动。自己从卡组抽1张。那之后，可以适用以下的效果。●从手牌特殊召唤1只恶魔族怪兽或盖放1张魔法陷阱卡。
+    此卡名的①②效果1回合仅可各使用1次。①：从手牌及被放置在自己场上的卡中，将1张通常陷阱卡送至墓地可以发动。从牌组将1只"拉比丽斯的仆从 亚莉安努"以外的等级4以下的恶魔族怪兽以守备表示特殊召唤。②：怪兽因自己通常陷阱卡的效果从场上离开的情况下可以发动。自己从牌组抽1张。然后，可以适用以下效果。
+    ●从手牌、特殊召唤1只恶魔族怪兽，或放置1张魔法・陷阱卡。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
@@ -94,6 +95,11 @@ sets:
     - Super Rare
   ko:
   - set_number: DBTM-KR016
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: DBTM-SC016
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
