--- a/data/cards/yugipedia917175.yaml
+++ b/data/cards/yugipedia917175.yaml
@@ -8,14 +8,14 @@ name:
   it:
   pt:
   ja: <ruby>伍世壊砕心<rt>マナドゥム・ブレイクハート</rt></ruby>
-  ja_romaji:
+  ja_romaji: Manadumu Bureikuhāto
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    Target 1 Tuner or 1 Synchro Monster in your GY; Special Summon it, then, if you Special Summoned a LIGHT monster by this effect, you can destroy 1 monster your opponent controls with an equal or lower ATK. If a "Visas Starfrost" or monster(s) with 1500 ATK/2100 DEF would be destroyed by battle or card effect, you can banish this card from your GY instead. You can only use each effect of "Manadome Breakheart" once per turn.
+    Target 1 Tuner or 1 Synchro Monster in your GY; Special Summon it, then, if it is a LIGHT monster, you can destroy 1 monster your opponent controls with an equal or lower ATK. If a "Visas Starfrost" and/or monster(s) with 1500 ATK/2100 DEF you control would be destroyed by battle or card effect, you can banish this card from your GY instead. You can only use each effect of "Manadome Breakheart" once per turn.
   de:
   es:
   fr:
