--- a/data/cards/yugipedia917170.yaml
+++ b/data/cards/yugipedia917170.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: マナドゥム・プライムハート
-  ja_romaji:
+  ja_romaji: Manadumu Puraimuhāto
   ko:
   ko_rr:
   zh-TW:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1+ Tuners + 1 LIGHT monster
-    This card can attack a number of times each Battle Phase, up to the number of Tuners used as Synchro Material for this card. Your opponent cannot target this card that was Synchro Summoned using a "Manadome" Tuner as material with card effects. If this face-up Synchro Summoned card in its owner's control leaves the field because of an opponent's card: You can Special Summon 1 of your "Visas Starfrost" or monsters with 1500 ATK/2100 DEF that is banished or in your GY.
+    This card can attack a number of times each Battle Phase, up to the number of Tuners used as its Synchro Material. Your opponent cannot target this card Synchro Summoned using a "Manadome" Tuner as material with card effects. If this face-up Synchro Summoned card in its owner's control leaves the field by an opponent's card: You can Special Summon 1 of your "Visas Starfrost" or 1 of your monsters with 1500 ATK/2100 DEF that is banished or in your GY.
   de:
   es:
   fr:
@@ -32,8 +32,10 @@ attribute: LIGHT
 level: 10
 atk: 3000
 def: 3000
+materials: 1 or more Tuners + 1 LIGHT monster
 series:
 - Manadome
+- Heart
 images:
 - index: 1
   image: ManadomePrimeHeart-CYAC-JP-OP.png
