--- a/data/cards/yugipedia917173.yaml
+++ b/data/cards/yugipedia917173.yaml
@@ -8,14 +8,14 @@ name:
   it:
   pt:
   ja: <ruby>伍世壊浄心<rt>マナドゥム・リフレーミング</rt></ruby>
-  ja_romaji:
+  ja_romaji: Manadumu Rifurēmingu
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    When a Spell/Trap Card, or monster effect, is activated whie you control a Synchro Monster: Negate the activation, then, if you have "Visas Starfrost" or a monster with 1500 ATK/2100 DEF on your field or in your GY, you can destroy that negated card. You can banish this card from your GY, then target up to 3 "Manadome" monsters in your GY; shuffle them into the Deck. You can only use each effect of "Manadome Reframing" once per turn.
+    When a Spell/Trap Card, or monster effect, is activated while you control a Synchro Monster: Negate the activation, then, if you have "Visas Starfrost" or a monster with 1500 ATK/2100 DEF on your field or in your GY, you can destroy that card. You can banish this card from your GY, then target up to 3 "Manadome" monsters in your GY; shuffle them into the Deck. You can only use each effect of "Manadome Reframing" once per turn.
   de:
   es:
   fr:
