--- a/data/cards/yugipedia917177.yaml
+++ b/data/cards/yugipedia917177.yaml
@@ -7,15 +7,15 @@ name:
   fr:
   it:
   pt:
-  ja: 伍世壊＝カラリウム
-  ja_romaji:
+  ja: <ruby>伍<rt>ご</rt></ruby><ruby>世<rt>せ</rt></ruby><ruby>壊<rt>かい</rt></ruby>＝カラリウム
+  ja_romaji: Gosekai = Karariumu
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    When this card is activated: You can add 1 "Manadome" monster or 1 "Visas Starfrost" from your Deck to your hand. LIGHT monsters you control gain 100 ATK for each Tuner you control and in your GY. If a face-up Tuner(s) you control is destroyed by battle or card effect: You can target 1 of those monsters; Special Summon it. You can only use this effect of "Primal Planet Kalarium" once per turn. You can only activate 1 "Primal Planet Kalarium" per turn.
+    When this card is activated: You can add 1 "Manadome" monster or 1 "Visas Starfrost" from your Deck to your hand. LIGHT monsters you control gain 100 ATK for each Tuner you control and in your GY. If a face-up Tuner(s) you control is destroyed by battle or card effect: You can target 1 of them; Special Summon it. You can only use this effect of "Primal Planet Kalarium" once per turn. You can only activate 1 "Primal Planet Kalarium" per turn.
   de:
   es:
   fr:
