--- a/data/cards/yugipedia917180.yaml
+++ b/data/cards/yugipedia917180.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>伍世壊摘心<rt>マナドゥム・アブシジョン</rt></ruby>
-  ja_romaji:
+  ja_romaji: Manadome Abushijon
   ko:
   ko_rr:
   zh-TW:
