--- a/data/cards/yugipedia917181.yaml
+++ b/data/cards/yugipedia917181.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>伍世壊心像<rt>マナドゥム・イマジン</rt></ruby>
-  ja_romaji:
+  ja_romaji: Manadumu Imajin
   ko:
   ko_rr:
   zh-TW:
