--- a/data/cards/01225009.yaml
+++ b/data/cards/01225009.yaml
@@ -12,7 +12,7 @@ name:
   ko: 라뷰린스 서번츠 아리안나
   ko_rr: Rabyurinseu Seobeoncheu Arianna
   zh-TW:
-  zh-CN: 白银城的仆人 阿里安娜
+  zh-CN: 拉比丽斯的仆从 亚莉安娜
 text:
   en: |-
     If this card is Normal or Special Summoned: You can add 1 "Labrynth" card from your Deck to your hand, except "Arianna the Labrynth Servant". If another monster(s) leaves the field by your Normal Trap effect (except during the Damage Step): You can draw 1 card, then you can apply this effect.
@@ -44,7 +44,8 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "라뷰린스 서번츠 아리안나" 이외의 "라뷰린스" 카드 1장을 패에 넣는다. ②: 자신의 일반 함정 카드의 효과로 몬스터가 필드에서 벗어났을 경우에 발동할 수 있다. 자신은 덱에서 1장 드로우한다. 그 후, 이하의 효과를 적용할 수 있다. ●패에서, 악마족 몬스터 1장을 특수 소환하거나, 마법 / 함정 카드 1장을 세트한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合只能有1次使用其中任意1个。①： 这张卡召唤或特殊召唤成功的场合可以发动。从卡组将1张「白銀の城の召使い アリアンナ／白银城的仆人 阿里安娜」以外的「ラビュリンス／白银城」卡加入手牌。②：自己的通常陷阱卡的效果使怪兽从场上离开的场合可以发动。自己从卡组抽1张。那之后，可以适用以下的效果。●从手牌特殊召唤1只恶魔族怪兽或盖放1张魔法陷阱卡。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：此卡召唤・特殊召唤成功的情况下可以发动。从牌组将1张"拉比丽斯的仆从 亚莉安娜"以外的"拉比丽斯"卡加入手牌。②：怪兽因自己通常陷阱卡的效果从场上离开的情况下可以发动。自己从牌组抽1张。然后，可以适用以下效果。
+    ●从手牌、特殊召唤1只恶魔族怪兽，或放置1张魔法・陷阱卡。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
@@ -94,6 +95,11 @@ sets:
     - Super Rare
   ko:
   - set_number: DBTM-KR017
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: DBTM-SC017
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
