--- a/data/cards/81172176.yaml
+++ b/data/cards/81172176.yaml
@@ -33,10 +33,10 @@ property: Normal
 images:
 - index: 1
   image: '  FiendComedian-AT08-JP-C.png'
-  illustration: '  FiendComedian-TF04-JP-VG.jpg'
+  illustration: '  FiendComedian-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: FiendComedian-LOD-NA-C-1E.jpg
-  illustration: FiendComedian-TF04-EN-VG.jpg
+  illustration: FiendComedian-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: LOD-EN098
