--- a/data/cards/yugipedia917177.yaml
+++ b/data/cards/yugipedia917177.yaml
@@ -27,6 +27,8 @@ text:
   zh-CN:
 card_type: Spell
 property: Field
+series:
+- World Destruction
 images:
 - index: 1
   image: PrimalPlanetKalarium-CYAC-JP-OP.png
