--- a/data/cards/23782705.yaml
+++ b/data/cards/23782705.yaml
@@ -45,10 +45,10 @@ series:
 images:
 - index: 1
   image: '  MachinaSniper-SR10-JP-C.png   '
-  illustration: MachinaSniper-TF05-JP-VG.jpg
+  illustration: MachinaSniper-TF05-JP-VG-artwork.png
 - index: '1.1'
   image: MachinaSniper-SR10-EN-C-1E.png
-  illustration: MachinaSniper-TF05-EN-VG.jpg
+  illustration: MachinaSniper-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: SDMM-EN007
