--- a/data/cards/26082117.yaml
+++ b/data/cards/26082117.yaml
@@ -32,7 +32,7 @@ text:
     이 카드는 싱크로 소재로 할 수 없다. ①: "가가가 매지션"은 자신 필드에 1장밖에 앞면 표시로 존재할 수 없다. ②: 1턴에 1번, 1~8 까지의 임의의 레벨을 선언하고 발동할 수 있다. 이 카드의 레벨은 턴 종료시까지 선언한 레벨이 된다.
   zh-TW:
   zh-CN: |-
-    这张卡不能作为同调素材。①：「我我我魔术师」在自己场上只能有1只表侧表示存在。②：1回合1次，宣言从1～8的任意等级才能发动。这张卡的等级直到回合结束时变成宣言的等级。
+    此卡不可作为同步素材。①："我我我魔术师"在自己场上仅可有1只以表侧表示存在。②：1回合1次，宣言1～8之间的任意等级可以发动。此卡的等级直至回合结束时为止，变为所宣言的等级。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: DARK
@@ -230,6 +230,11 @@ sets:
     rarities:
     - Normal Parallel Rare
   - set_number: SD42-KR004
+    set_name: 'Structure Deck: Overlay Universe'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: SD42-SC004
     set_name: 'Structure Deck: Overlay Universe'
     rarities:
     - Common
