--- a/data/cards/40318957.yaml
+++ b/data/cards/40318957.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 덱에서 "EM(엔터메이트) 도크로배트 조커" 이외의 "EM(엔터메이트)" 몬스터, "마술사" 펜듈럼 몬스터, "오드아이즈" 몬스터 중 어느 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡召唤成功时才能发动。从卡组把「娱乐伙伴 骷髅杂技小丑」以外的「EM」怪兽、「魔术师」灵摆怪兽、「异色眼」怪兽之内任意1只加入手卡。
+    ①：此卡召唤成功时可以发动。从牌组"娱乐伙伴 骷髅杂技小丑"以外的"娱乐伙伴"怪兽、"魔术师"灵摆怪兽、"异色眼"怪兽中，挑选任意1只加入手牌。
 card_type: Monster
 monster_type_line: Spellcaster / Pendulum / Effect
 attribute: DARK
@@ -59,7 +59,7 @@ pendulum_effect:
     ①: 자신은 "EM(엔터메이트)" 몬스터, "마술사" 펜듈럼 몬스터, "오드아이즈" 몬스터밖에 펜듈럼 소환할 수 없다. 이 효과는 무효화되지 않는다.
   zh-TW:
   zh-CN: |-
-    ①：自己不是「EM」怪兽、「魔术师」灵摆怪兽、「异色眼」怪兽不能灵摆召唤。这个效果不会被无效化。
+    ①：自己仅可灵摆召唤"娱乐伙伴"怪兽、"魔术师"灵摆怪兽、"异色眼"怪兽。此效果不会被无效化。
 series:
 - Performapal
 images:
@@ -193,7 +193,12 @@ sets:
     set_name: Advanced Event Pack 2021 Vol.1 Version 1
     rarities:
     - Secret Rare
+  zh-CN:
+  - set_number: SD29-SC005
+    set_name: 'Structure Deck: Master of Pendulum'
+    rarities:
+    - Super Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 337597
