--- a/data/cards/60694662.yaml
+++ b/data/cards/60694662.yaml
@@ -46,7 +46,7 @@ images:
   illustration: '   Skelengel-TF05-JP-VG.png'
 - index: '1.1'
   image: Skelengel-SBCB-EN-C-1E.png
-  illustration: Skelengel-TF05-EN-VG.jpg
+  illustration: Skelengel-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: YSD-EN011
