--- a/data/cards/94463200.yaml
+++ b/data/cards/94463200.yaml
@@ -38,10 +38,10 @@ property: Continuous
 images:
 - index: 1
   image: '  BattleScarred-EE1-JP-C.jpg'
-  illustration: '   BattleScarred-TF04-JP-VG.jpg'
+  illustration: '   BattleScarred-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: BattleScarred-DR1-EN-C-UE.jpg
-  illustration: BattleScarred-TF04-EN-VG.jpg
+  illustration: BattleScarred-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR1-EN259
