--- a/data/cards/96384007.yaml
+++ b/data/cards/96384007.yaml
@@ -45,10 +45,10 @@ series:
 images:
 - index: 1
   image: '  MachinaDefender-SR10-JP-C.png   '
-  illustration: MachinaDefender-TF05-JP-VG.jpg
+  illustration: MachinaDefender-TF05-JP-VG-artwork.png
 - index: '1.1'
   image: MachinaDefender-SR10-EN-C-1E.png
-  illustration: MachinaDefender-TF05-EN-VG.jpg
+  illustration: MachinaDefender-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: SDMM-EN008
