--- a/data/cards/46457856.yaml
+++ b/data/cards/46457856.yaml
@@ -41,7 +41,7 @@ def: 400
 images:
 - index: 1
   image: '  Tomozaurus-V1-JP-C.jpg'
-  illustration: '     Tomozaurus-TF04-JP-VG.jpg'
+  illustration: '     Tomozaurus-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: Tomozaurus-SS03-EN-C-1E.png
   illustration: Tomozaurus-TF04-EN-VG.png
