--- a/data/cards/32485271.yaml
+++ b/data/cards/32485271.yaml
@@ -43,10 +43,10 @@ materials: '"Feral Imp" + "Snakeyashi"'
 images:
 - index: 1
   image: '  RoseSpectreofDunn-V5-JP-C-Reprint.png'
-  illustration: RoseSpectreofDunn-TF04-JP-VG.jpg
+  illustration: RoseSpectreofDunn-TF05-JP-VG-artwork.png
 - index: '1.1'
   image: RoseSpectreofDunn-GFP2-EN-UR-1E.png
-  illustration: '  RoseSpectreofDunn-TF04-EN-VG.jpg'
+  illustration: '  RoseSpectreofDunn-TF04-EN-VG-artwork.png'
 sets:
   en:
   - set_number: OP05-EN022
