--- a/data/cards/33467872.yaml
+++ b/data/cards/33467872.yaml
@@ -83,9 +83,10 @@ sets:
     set_name: V Jump June 2021 promotional card
     rarities:
     - Ultra Rare
-  - set_number: 23PP-JP0??
+  - set_number: 23PP-JP021
     set_name: Premium Pack 2023
     rarities:
+    - Secret Rare
   ko:
   - set_number: PP17-KR029
     set_name: Premium Pack Vol.17
