--- a/data/cards/64591429.yaml
+++ b/data/cards/64591429.yaml
@@ -81,9 +81,10 @@ sets:
     set_name: V Jump August 2021 promotional card
     rarities:
     - Ultra Rare
-  - set_number: 23PP-JP0??
+  - set_number: 23PP-JP023
     set_name: Premium Pack 2023
     rarities:
+    - Secret Rare
   ko:
   - set_number: SD42-KRS03
     set_name: 'Structure Deck: Overlay Universe'
