--- a/data/cards/86028783.yaml
+++ b/data/cards/86028783.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: V Jump November 2021 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 23PP-JP026
+    set_name: Premium Pack 2023
+    rarities:
+    - Secret Rare
   ko:
   - set_number: PP17-KR033
     set_name: Premium Pack Vol.17
