--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -4750,6 +4750,18 @@
   ko_rr: Gihwangsin
   zh-TW:
   zh-CN:
+- en: Manadome
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: マナドゥム
+  ja_romaji: Manadumu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 - en: Wind-Up
   de: Aufzieh
   es: de Cuerda
