--- a/data/cards/04991081.yaml
+++ b/data/cards/04991081.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: V Jump July 2021 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 23PP-JP022
+    set_name: Premium Pack 2023
+    rarities:
+    - Secret Rare
   ko:
   - set_number: PP17-KR030
     set_name: Premium Pack Vol.17
