--- a/data/cards/27657173.yaml
+++ b/data/cards/27657173.yaml
@@ -45,6 +45,10 @@ sets:
     set_name: V Jump April 2022 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 23PP-JP031
+    set_name: Premium Pack 2023
+    rarities:
+    - Secret Rare
   ko:
   - set_number: PP17-KR042
     set_name: Premium Pack Vol.17
