--- a/data/cards/60948488.yaml
+++ b/data/cards/60948488.yaml
@@ -75,9 +75,10 @@ sets:
     set_name: V Jump December 2021 promotional card
     rarities:
     - Ultra Rare
-  - set_number: 23PP-JP0??
+  - set_number: 23PP-JP027
     set_name: Premium Pack 2023
     rarities:
+    - Secret Rare
   ko:
   - set_number: PP17-KR037
     set_name: Premium Pack Vol.17
