--- a/data/cards/76352503.yaml
+++ b/data/cards/76352503.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: V Jump March 2022 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 23PP-JP030
+    set_name: Premium Pack 2023
+    rarities:
+    - Secret Rare
   ko:
   - set_number: PP17-KR041
     set_name: Premium Pack Vol.17
