--- a/data/cards/79928401.yaml
+++ b/data/cards/79928401.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: V Jump October 2021 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 23PP-JP025
+    set_name: Premium Pack 2023
+    rarities:
+    - Secret Rare
   ko:
   - set_number: PP17-KR032
     set_name: Premium Pack Vol.17
