--- a/data/cards/87263576.yaml
+++ b/data/cards/87263576.yaml
@@ -73,9 +73,10 @@ sets:
     set_name: V Jump September 2021 promotional card
     rarities:
     - Ultra Rare
-  - set_number: 23PP-JP0??
+  - set_number: 23PP-JP024
     set_name: Premium Pack 2023
     rarities:
+    - Secret Rare
   ko:
   - set_number: PP17-KR031
     set_name: Premium Pack Vol.17
