--- a/data/cards/90583279.yaml
+++ b/data/cards/90583279.yaml
@@ -92,6 +92,10 @@ sets:
     set_name: V Jump February 2022 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 23PP-JP029
+    set_name: Premium Pack 2023
+    rarities:
+    - Secret Rare
   ko:
   - set_number: PP17-KR040
     set_name: Premium Pack Vol.17
