--- a/data/cards/27189308.yaml
+++ b/data/cards/27189308.yaml
@@ -8,7 +8,7 @@ name:
   it: Cheepcheepcheep
   pt: Piupiupiu
   ja: ぴよコッコ
-  ja_romaji: Piyokokko
+  ja_romaji: Piyo Kokko
   ko: 삐악꼬꼬
   ko_rr:
   zh-TW:
