--- a/data/cards/yugipedia917924.yaml
+++ b/data/cards/yugipedia917924.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 "Purrely" card from your Deck to your hand, except a Quick-Play Spell. You can target 1 "Purrely" Quick-Play Spell in your GY; Special Summon 1 Xyz Monster that mentions it from your Extra Deck, by using this face-up card you control as the material, and if you do, attach that target to the Summoned monster as additional material. (This is treated as an Xyz Summon.) You can only use each effect of "Purrely Lily" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 "Purrely" card from your Deck to your hand, except a Quick-Play Spell. You can target 1 "Purrely" Quick-Play Spell in your GY; Special Summon 1 Xyz Monster that mentions it from your Extra Deck, by using this face-up card you control as material, and if you do, attach that target to the Summoned monster as additional material. (This is treated as an Xyz Summon.) You can only use each effect of "Purrely Lily" once per turn.
   de:
   es:
   fr:
