--- a/data/cards/yugipedia917930.yaml
+++ b/data/cards/yugipedia917930.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    The equipped monster cannot be destroyed by card effects. You can only use each of the following effects of "Dance of the Mikanko - Fascinating Bird" once per turn. If your "Mikanko" monster battles, at the end of the Damage Step: You can target 1 card on the field; return it to the hand. If this card is in your GY: You can target 1 "Mikanko" monster in your GY; Special Summon it, and if you do, equip it with this card, also banish that monster when it leaves the field.
+    The equipped monster cannot be destroyed by card effects. You can only use each of the following effects of "Dance of the Mikanko - Fascinating Bird" once per turn. If your "Mikanko" monster battles, at the end of the Damage Step: You can target 1 card on the field; return it to the hand. If this card is in your GY: You can target 1 "Mikanko" monster in your GY; Special Summon it (but banish it when it leaves the field), and if you do, equip it with this card.
   de:
   es:
   fr:
