--- a/data/rush/16574.yaml
+++ b/data/rush/16574.yaml
@@ -1,6 +1,6 @@
 konami_id: 16574
 name:
-  en: Great Imperial Dinocarriage Dynarmix
+  en: Dynamic Dino Dynamix
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 summoning_condition:
   en: |-
-    You can Maximum Summon this card together with "Great Imperial Dinocarriage Dynarmix [L]" and "Great Imperial Dinocarriage Dynarmix [R]".
+    You can Maximum Summon this card together with "Dynamic Dino Dynamix [L]" and "Dynamic Dino Dynamix [R]".
   de:
   es:
   fr:
@@ -68,7 +68,7 @@ series:
 maximum_atk: 3400
 images:
 - index: 1
-  image: GreatImperialDinocarriageDynarmix-RDMAX2-JP-UR.png
+  image: DynamicDinoDynamix-RDMAX2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP006
