--- a/data/rush/16604.yaml
+++ b/data/rush/16604.yaml
@@ -1,6 +1,6 @@
 konami_id: 16604
 name:
-  en: Music Princess's Twin Squall
+  en: Music Princess's Whirling Wind
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: MusicPrincesssTwinSquall-RDMAX2-JP-C.png
+  image: MusicPrincesssWhirlingWind-RDMAX2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP037
