--- a/data/rush/16605.yaml
+++ b/data/rush/16605.yaml
@@ -1,6 +1,6 @@
 konami_id: 16605
 name:
-  en: Music Princess Secret Art - Triple Tiger
+  en: Music Princess Art - Triplet
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: MusicPrincessSecretArtTripleTiger-RDMAX2-JP-C.png
+  image: MusicPrincessArtTriplet-RDMAX2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP038
