--- a/data/rush/16573.yaml
+++ b/data/rush/16573.yaml
@@ -1,6 +1,6 @@
 konami_id: 16573
 name:
-  en: Great Imperial Dinocarriage Dynarmix [L]
+  en: Dynamic Dino Dynamix [L]
   de:
   es:
   fr:
@@ -52,7 +52,7 @@ series:
 - Nouveau Riche Dinosaur
 images:
 - index: 1
-  image: GreatImperialDinocarriageDynarmixL-RDMAX2-JP-UR.png
+  image: DynamicDinoDynamixL-RDMAX2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP005
