--- a/data/rush/16575.yaml
+++ b/data/rush/16575.yaml
@@ -1,6 +1,6 @@
 konami_id: 16575
 name:
-  en: Great Imperial Dinocarriage Dynarmix [R]
+  en: Dynamic Dino Dynamix [R]
   de:
   es:
   fr:
@@ -52,7 +52,7 @@ series:
 - Nouveau Riche Dinosaur
 images:
 - index: 1
-  image: GreatImperialDinocarriageDynarmixR-RDMAX2-JP-UR.png
+  image: DynamicDinoDynamixR-RDMAX2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP007
