--- a/data/rush/16576.yaml
+++ b/data/rush/16576.yaml
@@ -1,6 +1,6 @@
 konami_id: 16576
 name:
-  en: Zenigebazauls
+  en: Sneezing Greedizauls
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Nouveau Riche Dinosaur
 images:
 - index: 1
-  image: Zenigebazauls-RDMAX2-JP-C.png
+  image: SneezingGreedizauls-RDMAX2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP008
