--- a/data/rush/16582.yaml
+++ b/data/rush/16582.yaml
@@ -1,6 +1,6 @@
 konami_id: 16582
 name:
-  en: Platinumdon
+  en: Platnidon
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Nouveau Riche Dinosaur
 images:
 - index: 1
-  image: Platinumdon-RDMAX2-JP-C.png
+  image: Platnidon-RDMAX2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP014
