--- a/data/rush/16589.yaml
+++ b/data/rush/16589.yaml
@@ -1,6 +1,6 @@
 konami_id: 16589
 name:
-  en: Seedclotron Brusseln
+  en: Seedchrotron Brusselun
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Tron
 images:
 - index: 1
-  image: SeedclotronBrusseln-RDMAX2-JP-SR.png
+  image: SeedchrotronBrusselun-RDMAX2-JP-SR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP021
