--- a/data/rush/16597.yaml
+++ b/data/rush/16597.yaml
@@ -1,6 +1,6 @@
 konami_id: 16597
 name:
-  en: Constructor Demolition Wyrm Dracrush
+  en: Constructor Demolisher Wyrm Drake Crush
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Constructor
 images:
 - index: 1
-  image: ConstructorDemolitionWyrmDracrush-RDMAX2-JP-SR.png
+  image: ConstructorDemolisherWyrmDrakeCrush-RDMAX2-JP-SR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP029
