--- a/data/rush/16598.yaml
+++ b/data/rush/16598.yaml
@@ -1,6 +1,6 @@
 konami_id: 16598
 name:
-  en: Snows of Blisstopia
+  en: Silvermountain of Blisstopia
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Blisstopia
 images:
 - index: 1
-  image: SnowsofBlisstopia-RDSBD7-JP-C.png
+  image: SilvermountainofBlisstopia-RDSBD7-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP030
