--- a/data/rush/16600.yaml
+++ b/data/rush/16600.yaml
@@ -1,6 +1,6 @@
 konami_id: 16600
 name:
-  en: Constructor Return
+  en: Constructor Resurrection
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Constructor
 images:
 - index: 1
-  image: ConstructorReturn-RDSBD7-JP-C.png
+  image: ConstructorResurrection-RDSBD7-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP033
