--- a/data/rush/16602.yaml
+++ b/data/rush/16602.yaml
@@ -1,6 +1,6 @@
 konami_id: 16602
 name:
-  en: Horn Wan Yue the Music Princess
+  en: Horn Knives the Music Princess
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: HornWanYuetheMusicPrincess-RDMAX2-JP-SR.png
+  image: HornKnivestheMusicPrincess-RDMAX2-JP-SR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP035
