--- a/data/cards/yugipedia917930.yaml
+++ b/data/cards/yugipedia917930.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>御巫<rt>みかんこ</rt></ruby><ruby>舞<rt>ぶ</rt></ruby><ruby>踊<rt>よう</rt></ruby>－<ruby>迷<rt>まよ</rt></ruby>わし<ruby>鳥<rt>どり</rt></ruby>
-  ja_romaji: Mikanko Buyō - Mayowashi Dori
+  ja_romaji: Mikanko Buyō - Mayowashidori
   ko:
   ko_rr:
   zh-TW:
