--- a/data/cards/25862681.yaml
+++ b/data/cards/25862681.yaml
@@ -164,6 +164,15 @@ sets:
     set_name: Duelist Edition Volume 4
     rarities:
     - Ultra Rare
+  - set_number: RC04-JP031
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: ANPR-KR040
     set_name: Ancient Prophecy
