--- a/data/cards/32807846.yaml
+++ b/data/cards/32807846.yaml
@@ -671,6 +671,15 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: RC04-JP052
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: LOD-KR028
     set_name: Legacy of Darkness
