--- a/data/cards/45462149.yaml
+++ b/data/cards/45462149.yaml
@@ -126,6 +126,15 @@ sets:
     set_name: The Valuable Book 21 promotional cards
     rarities:
     - Ultra Rare
+  - set_number: RC04-JP046
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PP14-KRB28
     set_name: Premium Pack Vol.14 2nd Wave
