--- a/data/cards/46448938.yaml
+++ b/data/cards/46448938.yaml
@@ -97,6 +97,15 @@ sets:
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Common
+  - set_number: RC04-JP055
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: LTGY-KR063
     set_name: Lord of the Tachyon Galaxy
@@ -112,6 +121,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Forbidden
-  ocg: Forbidden
+  tcg: Limited
+  ocg: Limited
 yugipedia_page_id: 274074
