--- a/data/cards/79606837.yaml
+++ b/data/cards/79606837.yaml
@@ -162,6 +162,15 @@ sets:
     set_name: LINK VRAINS Pack 3
     rarities:
     - Common
+  - set_number: RC04-JP032
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: NECH-KR052
     set_name: The New Challengers
