--- a/data/cards/99266988.yaml
+++ b/data/cards/99266988.yaml
@@ -97,6 +97,15 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: RC04-JP066
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: WPP1-KR014
     set_name: World Premiere Pack 2020
