--- a/data/cards/15397015.yaml
+++ b/data/cards/15397015.yaml
@@ -114,6 +114,15 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: RC04-JP011
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: EXFO-KR035
     set_name: Extreme Force
