--- a/data/cards/39030163.yaml
+++ b/data/cards/39030163.yaml
@@ -128,6 +128,15 @@ sets:
     set_name: The Valuable Book 17 promotional cards
     rarities:
     - Ultra Rare
+  - set_number: RC04-JP038
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PP11-KR038
     set_name: Premium Pack Vol.11
