--- a/data/cards/43694650.yaml
+++ b/data/cards/43694650.yaml
@@ -115,6 +115,15 @@ sets:
     set_name: Extra Pack 2019
     rarities:
     - Ultra Rare
+  - set_number: RC04-JP014
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: EP19-KR024
     set_name: Extra Pack 2019
