--- a/data/cards/54757758.yaml
+++ b/data/cards/54757758.yaml
@@ -113,6 +113,15 @@ sets:
     set_name: Tournament Pack 2021 Vol.1
     rarities:
     - Common
+  - set_number: RC04-JP029
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: AE13-KR022
     set_name: Advanced Event Pack 2019 Vol.1
