--- a/data/cards/58577036.yaml
+++ b/data/cards/58577036.yaml
@@ -216,6 +216,15 @@ sets:
     set_name: 'Structure Deck R: Lost Sanctuary'
     rarities:
     - Common
+  - set_number: RC04-JP053
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PGD-KR081
     set_name: Pharaonic Guardian
