--- a/data/cards/62968263.yaml
+++ b/data/cards/62968263.yaml
@@ -98,6 +98,15 @@ sets:
     rarities:
     - Ultra Rare
     - 20th Secret Rare
+  - set_number: RC04-JP018
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: LGB1-KR029
     set_name: Legendary Gold Set
