--- a/data/cards/72167543.yaml
+++ b/data/cards/72167543.yaml
@@ -147,6 +147,15 @@ sets:
     set_name: Advanced Tournament Pack 2017 Vol.1
     rarities:
     - Normal Parallel Rare
+  - set_number: RC04-JP036
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: LVAL-KR057
     set_name: Legacy of the Valiant
