--- a/data/cards/86937530.yaml
+++ b/data/cards/86937530.yaml
@@ -143,6 +143,15 @@ sets:
     set_name: 'Structure Deck: Masters of the Spiritual Arts'
     rarities:
     - Common
+  - set_number: RC04-JP010
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: MACR-KR038
     set_name: Maximum Crisis
