--- a/data/rush/16170.yaml
+++ b/data/rush/16170.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Beast-Warrior Type monster from your Graveyard to your field face-up. It inflicts piercing battle damage this turn.
+    Special Summon 1 Beast-Warrior Type monster from your Graveyard to your field face-up. It inflicts piercing battle damage this turn (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
