--- a/data/cards/79864860.yaml
+++ b/data/cards/79864860.yaml
@@ -117,6 +117,9 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Ultra Rare
+  - set_number: SUB1-JP039
+    set_name: Secret Utility Box
+    rarities:
   ko:
   - set_number: DP22-KR045
     set_name: 'Duelist Pack: Legend Duelist 5'
