--- a/data/cards/03117804.yaml
+++ b/data/cards/03117804.yaml
@@ -141,6 +141,10 @@ sets:
     set_name: Duelist Alliance
     rarities:
     - Super Rare
+  - set_number: 23TP-JP105
+    set_name: Tournament Pack 2023 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: DUEA-KR013
     set_name: Duelist Alliance
