--- a/data/cards/11069680.yaml
+++ b/data/cards/11069680.yaml
@@ -97,6 +97,9 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 6'
     rarities:
     - Super Rare
+  - set_number: SUB1-JP019
+    set_name: Secret Utility Box
+    rarities:
   ko:
   - set_number: DP23-KR024
     set_name: 'Duelist Pack: Legend Duelist 6'
