--- a/data/cards/38495396.yaml
+++ b/data/cards/38495396.yaml
@@ -191,6 +191,10 @@ sets:
     set_name: 20th Anniversary Pack 2nd Wave
     rarities:
     - Super Parallel Rare
+  - set_number: 23TP-JP109
+    set_name: Tournament Pack 2023 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: DS13-KRL42
     set_name: 'Duelist Set: Version Lightning Star'
