--- a/data/cards/91949988.yaml
+++ b/data/cards/91949988.yaml
@@ -121,6 +121,10 @@ sets:
     set_name: Galactic Overlord
     rarities:
     - Super Rare
+  - set_number: 23TP-JP110
+    set_name: Tournament Pack 2023 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: GAOV-KR046
     set_name: Galactic Overlord
