--- a/data/tcg-speed-skill/yugipedia901308.yaml
+++ b/data/tcg-speed-skill/yugipedia901308.yaml
@@ -1,7 +1,7 @@
 name:
   en: Chillin' Outback
   de: Chillen im Hinterland
-  es:
+  es: Relax Rural
   fr:
   it:
   pt:
@@ -30,7 +30,8 @@ effect:
     Once per turn, you can change 1 face-up "Koala" or "Kangaroo" monster's battle position. "Koala" and "Kangaroo" monsters you control can attack while in face-up Defense Position. If they do, apply their DEF for damage calculation.
   de: |-
     Einmal pro Spielzug kannst du die Kampfposition von 1 offenen „Koala“- oder „Känguru“-Monster ändern. „Koala“- und „Känguru“ Monster, die du kontrollierst, können angreifen, solange sie sich in offener Verteidigungsposition befinden. Falls sie dies tun, verwende für die Schadensberechnung ihre DEF.
-  es:
+  es: |-
+    Una vez por turno: puedes cambiar la posición de batalla de 1 monstruo "Koala" o "Kanguro" boca arriba. Los monstruos "Koala" y "Kanguro" que controlas pueden atacar mientras están en Posición de Defensa boca arriba. Si lo hacen, aplica su DEF para el cálculo de daño.
   fr:
   it:
   pt:
